Added modified collections from Apache Harmony project. Minor cleanup, permitted by migration to java 8.