@@ -24,26 +24,24 @@ import java.util.*;
 import java.util.Map.Entry;
 import java.util.concurrent.atomic.AtomicInteger;
 
-import statechum.Configuration;
-import statechum.DeterministicDirectedSparseGraph;
-import statechum.Helper;
-import statechum.JUConstants;
+import harmony.collections.HashMapWithSearch;
+import statechum.*;
 import statechum.DeterministicDirectedSparseGraph.CmpVertex;
+import statechum.DeterministicDirectedSparseGraph.VertID;
 import statechum.JUConstants.PAIRCOMPATIBILITY;
-import statechum.Label;
-import statechum.Pair;
 import statechum.analysis.learning.AbstractOracle;
 import statechum.analysis.learning.StatePair;
 import statechum.analysis.learning.rpnicore.AMEquivalenceClass.IncompatibleStatesException;
 import statechum.analysis.learning.rpnicore.Transform.ConvertALabel;
-import statechum.collections.HashMapWithSearch;
+import statechum.collections.MapWithSearch;
 import statechum.model.testset.PTASequenceEngine;
 import statechum.model.testset.PTA_FSMStructure;
 import statechum.model.testset.PrefixFreeCollection;
 import statechum.model.testset.SlowPrefixFreeCollection;
 import statechum.model.testset.PTASequenceEngine.SequenceSet;
 
-public class WMethod 
+@SuppressWarnings("Convert2Diamond")
+public class WMethod
 {
 	final LearnerGraph coregraph;
 	
@@ -94,7 +92,7 @@ public class WMethod
 	{
 		Set<Label> alphabet =  coregraph.learnerCache.getAlphabet();
 		List<List<Label>> partialSet = coregraph.pathroutines.computeStateCover(coregraph.getInit());
-		characterisationSet = computeWSet_reducedmemory(coregraph);if (characterisationSet.isEmpty()) characterisationSet.add(Arrays.asList(new Label[]{}));
+		characterisationSet = computeWSet_reducedmemory(coregraph);if (characterisationSet.isEmpty()) characterisationSet.add(List.of());
 		transitionCover = crossWithSet(partialSet,alphabet);transitionCover.addAll(partialSet);
 
 		SlowPrefixFreeCollection testsequenceCollection = new SlowPrefixFreeCollection();
@@ -113,7 +111,7 @@ public class WMethod
 	{
 		Set<Label> alphabet =  coregraph.learnerCache.getAlphabet();
 		List<List<Label>> stateCover = coregraph.pathroutines.computeStateCover(initialState);
-		characterisationSet = computeWSet_reducedmemory(coregraph);if (characterisationSet.isEmpty()) characterisationSet.add(Arrays.asList(new Label[]{}));
+		characterisationSet = computeWSet_reducedmemory(coregraph);if (characterisationSet.isEmpty()) characterisationSet.add(List.of());
 		transitionCover = crossWithSet(stateCover,alphabet);transitionCover.addAll(stateCover);
 
 		PTASequenceEngine engine = new PTA_FSMStructure(coregraph,initialState);
@@ -180,8 +178,7 @@ public class WMethod
 		List<List<ELEM>> returnVect = new LinkedList<List<ELEM>>();
 		for(List<ELEM> elemA:a){
 			for(ELEM elemB:b) {
-				List<ELEM> cross = new LinkedList<ELEM>();
-				cross.addAll(elemA);
+				List<ELEM> cross = new LinkedList<ELEM>(elemA);
 				cross.add(elemB);
 				returnVect.add( cross );
 			}
@@ -283,6 +280,7 @@ public class WMethod
 	/** Maps transitions from a state to equivalence classes of the states those transitions lead to.
 	 * Assumes that there are not many outgoing transitions from each state, otherwise {@link HashMapWithSearch} has to be used.
 	 */
+	@SuppressWarnings("Convert2Diamond")
 	private static class TransitionRowEqClass extends HashMap<Label,Integer>
 	{
 		private final boolean accept;
@@ -310,7 +308,7 @@ public class WMethod
 		@Override
 		public boolean equals(Object obj)
 		{
-			if (obj == null || !(obj instanceof TransitionRowEqClass))
+			if (!(obj instanceof TransitionRowEqClass))
 				return false;
 			TransitionRowEqClass what = (TransitionRowEqClass) obj;
 			
@@ -354,20 +352,14 @@ public class WMethod
 		public Set<Label> computeDistinguishingLabel(TransitionRowEqClass what)
 		{
 			Set<Label> distInputs = new HashSet<Label>();
-			
-			Iterator<Entry<Label,Integer>> mapAiter = entrySet().iterator();
-			while(mapAiter.hasNext())
-			{
-				Entry<Label,Integer> enA = mapAiter.next();
+
+			for (Entry<Label, Integer> enA : entrySet()) {
 				Integer mapBvalue = what.get(enA.getKey());
 				if (!enA.getValue().equals(mapBvalue)) // different equivalence classes
 					distInputs.add(enA.getKey());
 			}
-			
-			Iterator<Entry<Label,Integer>> mapBiter = what.entrySet().iterator();
-			while(mapBiter.hasNext())
-			{
-				Entry<Label,Integer> enB = mapBiter.next();
+
+			for (Entry<Label, Integer> enB : what.entrySet()) {
 				Integer mapAvalue = get(enB.getKey());
 				if (!enB.getValue().equals(mapAvalue))
 					distInputs.add(enB.getKey());
@@ -383,7 +375,7 @@ public class WMethod
 		 * (a circle of reject-states will be turned into a number of separate reject-states due to the filtering
 		 * of transitions to the sink equivalence class.
 		 * 
-		 * @return
+		 * @return true if the state appears to be like a sink state.
 		 */
 		public boolean looksLikeSink() 
 		{
@@ -399,15 +391,14 @@ public class WMethod
 	 * Since we do not know in advance whether there are any states behaviourally-equivalent to a sink state
 	 * (and there could be a few of them, connected in a ring), a sink state is explicitly added.
 	 * @param fsm the machine to process
-	 * @param alphabet
 	 * @return characterising set
 	 */
 	public static List<List<Label>> computeWSetOrig(LearnerGraph fsm) throws EquivalentStatesException
 	{ 
-		Map<CmpVertex,Integer> equivalenceClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber()), 
-			newEquivClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber());
+		MapWithSearch<VertID,CmpVertex,Integer> equivalenceClasses = new HashMapWithSearch<VertID,CmpVertex,Integer>(fsm.getStateNumber()),
+			newEquivClasses = new HashMapWithSearch<VertID,CmpVertex,Integer>(fsm.getStateNumber());
 		Map<Map<Label,Integer>,Integer> sortedRows = new HashMap<Map<Label,Integer>,Integer>();
-		Map<CmpVertex,Map<CmpVertex,List<Label>>> Wdata = new HashMapWithSearch<CmpVertex,Map<CmpVertex,List<Label>>>(fsm.getStateNumber());
+		Map<CmpVertex,Map<CmpVertex,List<Label>>> Wdata = new HashMap<CmpVertex,Map<CmpVertex,List<Label>>>(fsm.getStateNumber());
 		CmpVertex sink = generateSinkState(fsm);
 		for(CmpVertex state:fsm.transitionMatrix.keySet()) 
 			equivalenceClasses.put(state, state.isAccept()?1:0);
@@ -415,19 +406,17 @@ public class WMethod
 		
 		for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 		{
-			Map<CmpVertex,List<Label>> row = new HashMapWithSearch<CmpVertex,List<Label>>(fsm.getStateNumber());
+			MapWithSearch<VertID,CmpVertex,List<Label>> row = new HashMapWithSearch<VertID,CmpVertex,List<Label>>(fsm.getStateNumber());
 			Wdata.put(stateA.getKey(), row);
 
-			Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-			while(stateB_It.hasNext())
-			{
-				Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+			for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+				if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
 				row.put(stateB.getKey(), new LinkedList<Label>());
 			}
 		}
 		
-		int equivalenceClassNumber = 0,oldEquivalenceClassNumber=0;
-		int statesEquivalentToSink = 0;
+		int equivalenceClassNumber = 0,oldEquivalenceClassNumber;
+		int statesEquivalentToSink;
 		do
 		{
 			oldEquivalenceClassNumber = equivalenceClassNumber;statesEquivalentToSink = 0;
@@ -460,45 +449,44 @@ public class WMethod
 			//System.out.println("v163: "+fsm.transitionMatrix.get(fsm.findVertex("V163")));
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 			{
-				Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-				while(stateB_It.hasNext())
-				{
-					Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+				for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+					if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
 
 					if (stateA.getValue().equals(stateB.getValue()) &&
-							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey())))
-					{// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
-						
-						List<Label> Wsequence = null;
+							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey()))) {// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
+
+						List<Label> Wsequence;
 						if (Wdata.get(stateA.getKey()).containsKey(stateB.getKey()))
 							Wsequence = Wdata.get(stateA.getKey()).get(stateB.getKey());// depending on the ordering in the matrix, either (A,B) or (B,A) should be defined.
 						else
 							Wsequence = Wdata.get(stateB.getKey()).get(stateA.getKey());
-						assert Wsequence != null : "In states ("+stateA.getKey()+","+stateB.getKey()+") Wsequence is null";
-						assert Wsequence.isEmpty() : "In states ("+stateA.getKey()+","+stateB.getKey()+") Wsequence is non-empty and contains "+Wsequence;
-						
+						assert Wsequence != null : "In states (" + stateA.getKey() + "," + stateB.getKey() + ") Wsequence is null";
+						assert Wsequence.isEmpty() : "In states (" + stateA.getKey() + "," + stateB.getKey() + ") Wsequence is non-empty and contains " + Wsequence;
+
 						// the two states used to be equivalent but not any more, find the different element
 						Label label = newMap.get(stateA.getKey()).computeDistinguishingLabel(newMap.get(stateB.getKey())).iterator().next();
 						//System.out.println(stateA.getKey()+" - "+stateB.getKey());
 						/*if (
 								stateA.getKey().getID().equals(VertexID.parseID("V148")))
 							System.out.println("v148 v.s. "+stateB.getKey()+" label: "+label);*/
-						CmpVertex toA = stateA.getKey() == sink? sink:fsm.transitionMatrix.get(stateA.getKey()).get(label);if (toA == null) toA=sink;
-						CmpVertex toB = stateB.getKey() == sink? sink:fsm.transitionMatrix.get(stateB.getKey()).get(label);if (toB == null) toB=sink;
+						CmpVertex toA = stateA.getKey() == sink ? sink : fsm.transitionMatrix.get(stateA.getKey()).get(label);
+						if (toA == null) toA = sink;
+						CmpVertex toB = stateB.getKey() == sink ? sink : fsm.transitionMatrix.get(stateB.getKey()).get(label);
+						if (toB == null) toB = sink;
 						Wsequence.add(label);
-						List<Label> Wprevious = null;
+						List<Label> Wprevious;
 						if (Wdata.get(toA).containsKey(toB))
 							Wprevious = Wdata.get(toA).get(toB);// depending on the ordering in the matrix, either (A,B) or (B,A) should be defined.
 						else
 							Wprevious = Wdata.get(toB).get(toA);
-						assert Wprevious != null : "In states ("+stateA.getKey()+","+stateB.getKey()+") previous pair ("+toA+","+toB+") has a null sequence";
-						assert !Wprevious.isEmpty() || toA.isAccept() != toB.isAccept(): "In states ("+stateA.getKey()+","+stateB.getKey()+"), separating input \""+label+"\" previous pair ("+toA+"("+toA.isAccept()+"),"+toB+"("+toB.isAccept()+") was not separated";
-						
+						assert Wprevious != null : "In states (" + stateA.getKey() + "," + stateB.getKey() + ") previous pair (" + toA + "," + toB + ") has a null sequence";
+						assert !Wprevious.isEmpty() || toA.isAccept() != toB.isAccept() : "In states (" + stateA.getKey() + "," + stateB.getKey() + "), separating input \"" + label + "\" previous pair (" + toA + "(" + toA.isAccept() + ")," + toB + "(" + toB.isAccept() + ") was not separated";
+
 						Wsequence.addAll(Wprevious);
 					}
 				}			
 			}			
-			equivalenceClasses = newEquivClasses;newEquivClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.config.getMaxAcceptStateNumber());
+			equivalenceClasses = newEquivClasses;newEquivClasses = new HashMapWithSearch<VertID,CmpVertex,Integer>(fsm.config.getMaxAcceptStateNumber());
 		}
 		while(equivalenceClassNumber > oldEquivalenceClassNumber);
 
@@ -512,12 +500,9 @@ public class WMethod
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 				if (sinkAsRealState || stateA.getKey() != sink)
 				{
-					Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-					while(stateB_It.hasNext())
-					{
-						Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
-						if (sinkAsRealState || stateB.getKey() != sink)
-						{
+					for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+						if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+						if (sinkAsRealState || stateB.getKey() != sink) {
 							List<Label> seq = Wdata.get(stateA.getKey()).get(stateB.getKey());
 							assert seq != null : "equivalenceClasses uses a different state ordering to that of LearnerGraphs";
 							result.add(seq);
@@ -536,7 +521,7 @@ public class WMethod
 	 * this method returns a label which will distinguish the largest number of pairs.
 	 * 
 	 * @param distinguishingLabels a map from pairs of states to sets of distinguishing labels.
-	 * @return
+	 * @return computes a label distinguishing the largest number of states
 	 */ 
 	public static Label computeTopLabel(Map<CmpVertex,Map<CmpVertex,Set<Label>>> distinguishingLabels)
 	{
@@ -593,8 +578,7 @@ public class WMethod
 	 * has to be added because machines are typically incomplete and we have to verify that when a label is not 
 	 * implemented, it leads to the sink state - this requires distinguishing between sink and all other states.
 	 * Adding such a sink state means changing the graph, hence a copy is made and modified.
-	 * @param fsm the machine to process
-	 * @param alphabet
+	 * @param fsmOrig the machine to process
 	 * @return characterising set
 	 */
 	public static Collection<List<Label>> computeWSet_reducedmemory(LearnerGraph fsmOrig) throws EquivalentStatesException
@@ -604,39 +588,38 @@ public class WMethod
 		Configuration copyConfig = fsmOrig.config.copy();copyConfig.setLearnerCloneGraph(false);
 		LearnerGraph fsm = new LearnerGraph(fsmOrig,copyConfig);
 		CmpVertex sink = generateSinkState(fsm);fsm.transitionMatrix.put(sink, fsm.createNewRow());
-		Map<CmpVertex,Integer> equivalenceClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber()), newEquivClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber());
+		Map<CmpVertex,Integer> equivalenceClasses = new HashMap<CmpVertex,Integer>(fsm.getStateNumber()),
+				newEquivClasses = new HashMap<CmpVertex,Integer>(fsm.getStateNumber());
 		
-		// Since this one associates maps to numbers, make it Hash set so that fewer computations have to be performed.
+		// Since this one associates maps with numbers, make it Hash set so that fewer computations have to be performed.
 		Map<Map<Label,Integer>,Integer> sortedRows = new HashMap<Map<Label,Integer>,Integer>();
-		int WNext[] = new int[fsm.transitionMatrix.size()*(fsm.transitionMatrix.size()+1)/2];
-		Label WChar[] = new Label[fsm.transitionMatrix.size()*(fsm.transitionMatrix.size()+1)/2];
+		int[] WNext = new int[fsm.transitionMatrix.size()*(fsm.transitionMatrix.size()+1)/2];
+		Label[] WChar = new Label[fsm.transitionMatrix.size()*(fsm.transitionMatrix.size()+1)/2];
 		final Map<Label,AtomicInteger> distinguishingLabels = new HashMap<Label,AtomicInteger>();
 		
 		for(CmpVertex stateA:fsm.transitionMatrix.keySet())
 		{
 			boolean stateAaccept = stateA.isAccept();
 			equivalenceClasses.put(stateA, stateAaccept?1:0);
-			Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-			while(stateB_It.hasNext())
-			{
-				Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA)) break; // we only process a triangular subset.
-				int index = fsm.wmethod.vertexToInt(stateA,stateB.getKey());
+			for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+				if (stateB.getKey().equals(stateA)) break; // we only process a triangular subset.
+				int index = fsm.wmethod.vertexToInt(stateA, stateB.getKey());
 				WChar[index] = null;
 				if (stateAaccept == stateB.getKey().isAccept())
-					WNext[index]=W_INDIST;// where two states have the same acceptance conditions, 
+					WNext[index] = W_INDIST;// where two states have the same acceptance conditions,
 					// they cannot be distinguished at this stage.
 				else
-					WNext[index]=W_NOPREV;// an empty sequence distinguishes between the two, 
-					// the fact that seq is empty is due to WChar[index] being null.
+					WNext[index] = W_NOPREV;// an empty sequence distinguishes between the two,
+				// the fact that seq is empty is due to WChar[index] being null.
 			}
 		}
 
-		int equivalenceClassNumber = 0,oldEquivalenceClassNumber=0;
-		int statesEquivalentToSink = 0;
+		int equivalenceClassNumber = 0,oldEquivalenceClassNumber;
+		int statesEquivalentToSink;
 		do
 		{
 			oldEquivalenceClassNumber = equivalenceClassNumber;statesEquivalentToSink = 0;
-			Map<CmpVertex,TransitionRowEqClass> newMap = new HashMapWithSearch<CmpVertex,TransitionRowEqClass>(fsm.getStateNumber());
+			MapWithSearch<VertID,CmpVertex,TransitionRowEqClass> newMap = new HashMapWithSearch<VertID,CmpVertex,TransitionRowEqClass>(fsm.getStateNumber());
 			equivalenceClassNumber = 0;sortedRows.clear();newEquivClasses.clear();
 			int sinkEqClass = equivalenceClasses.get(sink);
 			for(CmpVertex stateA:equivalenceClasses.keySet())
@@ -652,7 +635,7 @@ public class WMethod
 							// vectors  for two reject-states with transitions to a sink state (equivalence class 0)
 							// { a->0, b->0 } and { a->0 } look superficially different even though they
 							// both denote states accepting an empty language.
-							// Note that, any real sink states would belong to the same equivalce class as our sink state. 
+							// Note that any real sink states would belong to the same equivalce class as our sink state.
 							map.put(labelstate.getKey(), targetEqClass);
 					}
 				
@@ -674,23 +657,22 @@ public class WMethod
 			
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 			{
-				Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-				while(stateB_It.hasNext())
-				{
-					Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+				for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+					if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
 
 					if (stateA.getValue().equals(stateB.getValue()) &&
-							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey())))
-					{// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
-						
+							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey()))) {// the two states
+						// used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
+
 						// the two states used to be equivalent but not any more, find inputs which 
 						// distinguish between them and update the histogram to count the number
 						// of inputs which can be used distinguish between states at this stage.
-						for(Label distLabel:newMap.get(stateA.getKey()).computeDistinguishingLabel(newMap.get(stateB.getKey())))
-						{
+						for (Label distLabel : newMap.get(stateA.getKey()).computeDistinguishingLabel(newMap.get(stateB.getKey()))) {
 							AtomicInteger aint = distinguishingLabels.get(distLabel);
-							if (aint == null) { aint = new AtomicInteger(1);distinguishingLabels.put(distLabel, aint); }
-							else aint.addAndGet(1);
+							if (aint == null) {
+								aint = new AtomicInteger(1);
+								distinguishingLabels.put(distLabel, aint);
+							} else aint.addAndGet(1);
 						}
 					}
 				}
@@ -699,48 +681,43 @@ public class WMethod
 			// distinguishingLabels contains all labels we may use; the choice of an optimal subset is NP, hence we simply pick
 			// those which look best until we distinguish all states.
 			ArrayList<Label> labelList = new ArrayList<Label>(distinguishingLabels.size());labelList.addAll(0, distinguishingLabels.keySet());
-			Collections.sort(labelList, new Comparator<Label>(){
-
-				@Override
-				public int compare(Label o1, Label o2) {
-					int diffInNumberOfdistStates = -distinguishingLabels.get(o1).get() + distinguishingLabels.get(o2).get();
-					if (diffInNumberOfdistStates != 0) return diffInNumberOfdistStates;
-					return o1.compareTo(o2);// otherwise, just compare strings.
-				}
-				
+			labelList.sort(
+					(o1, o2) -> {
+				int diffInNumberOfdistStates = -distinguishingLabels.get(o1).get() + distinguishingLabels.get(o2).get();
+				if (diffInNumberOfdistStates != 0) return diffInNumberOfdistStates;
+				return o1.compareTo(o2);// otherwise, just compare strings.
 			});
 			
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 			{
-				Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-				while(stateB_It.hasNext())
-				{
-					Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
-				//System.out.println("looking at "+stateA.getKey()+", "+stateB.getKey()+" eq classes: "+stateA.getValue()+", "+stateB.getValue());
+				for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+					if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+					//System.out.println("looking at "+stateA.getKey()+", "+stateB.getKey()+" eq classes: "+stateA.getValue()+", "+stateB.getValue());
 					if (stateA.getValue().equals(stateB.getValue()) &&
-							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey())))
-					{// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
+							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey()))) {// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
 						Set<Label> distLabels = newMap.get(stateA.getKey()).computeDistinguishingLabel(newMap.get(stateB.getKey()));
 						Label topLabel = null;
 						Iterator<Label> topLabelIter = labelList.iterator();
-						while(topLabel == null)
-						{
-							Label lbl = topLabelIter.next();if (distLabels.contains(lbl)) topLabel = lbl;
+						while (topLabel == null) {
+							Label lbl = topLabelIter.next();
+							if (distLabels.contains(lbl)) topLabel = lbl;
 						}
-	
-						CmpVertex toA = stateA.getKey() == sink? sink:fsm.transitionMatrix.get(stateA.getKey()).get(topLabel);if (toA == null) toA=sink;
-						CmpVertex toB = stateB.getKey() == sink? sink:fsm.transitionMatrix.get(stateB.getKey()).get(topLabel);if (toB == null) toB=sink;
-						int index = fsm.wmethod.vertexToInt(stateA.getKey(),stateB.getKey());
-						assert WChar[index] == null : "In states ("+stateA.getKey()+","+stateB.getKey()+") Wsequence is non-empty and contains "+WChar[index];
+
+						CmpVertex toA = stateA.getKey() == sink ? sink : fsm.transitionMatrix.get(stateA.getKey()).get(topLabel);
+						if (toA == null) toA = sink;
+						CmpVertex toB = stateB.getKey() == sink ? sink : fsm.transitionMatrix.get(stateB.getKey()).get(topLabel);
+						if (toB == null) toB = sink;
+						int index = fsm.wmethod.vertexToInt(stateA.getKey(), stateB.getKey());
+						assert WChar[index] == null : "In states (" + stateA.getKey() + "," + stateB.getKey() + ") Wsequence is non-empty and contains " + WChar[index];
 						WChar[index] = topLabel;
-						int previous = fsm.wmethod.vertexToInt(toA,toB);
-						assert toA.isAccept() != toB.isAccept() || WChar[previous] != null : "In states ("+stateA.getKey()+","+stateB.getKey()+") previous pair ("+toA+","+toB+") has a null sequence";
+						int previous = fsm.wmethod.vertexToInt(toA, toB);
+						assert toA.isAccept() != toB.isAccept() || WChar[previous] != null : "In states (" + stateA.getKey() + "," + stateB.getKey() + ") previous pair (" + toA + "," + toB + ") has a null sequence";
 						WNext[index] = previous;
-					}						
+					}
 				}			
 			}
 			
-			equivalenceClasses = newEquivClasses;newEquivClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber());
+			equivalenceClasses = newEquivClasses;newEquivClasses = new HashMapWithSearch<VertID,CmpVertex,Integer>(fsm.getStateNumber());
 		}
 		while(equivalenceClassNumber > oldEquivalenceClassNumber);
 
@@ -760,23 +737,18 @@ public class WMethod
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 				if (sinkAsRealState || stateA.getKey() != sink)
 				{
-					Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-					while(stateB_It.hasNext())
-					{
-						Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
-						if (sinkAsRealState || stateB.getKey() != sink)
-						{
+					for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+						if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+						if (sinkAsRealState || stateB.getKey() != sink) {
 							LinkedList<Label> seq = new LinkedList<Label>();
-							int index = fsm.wmethod.vertexToInt(stateA.getKey(),stateB.getKey());
+							int index = fsm.wmethod.vertexToInt(stateA.getKey(), stateB.getKey());
 							assert index >= 0;
-							if (WNext[index]!=W_INDIST)
-							{// stateA and stateB have been separated.
-								
+							if (WNext[index] != W_INDIST) {// stateA and stateB have been separated.
+
 								Label elementToAdd = WChar[index];
-								while(elementToAdd != null)
-								{
+								while (elementToAdd != null) {
 									seq.add(elementToAdd);
-									index=WNext[index];
+									index = WNext[index];
 									elementToAdd = WChar[index];
 								}
 								assert WNext[index] == W_NOPREV : "empty element not at end of sequence";
@@ -802,15 +774,14 @@ public class WMethod
 	 * separates an accept from a reject-state.
 	 * 
 	 * @param fsm the machine to process
-	 * @param alphabet
 	 * @return characterising set
 	 */
 	public static Collection<List<Label>> computeWSet_reducedw(LearnerGraph fsm) throws EquivalentStatesException
 	{
-		Map<CmpVertex,Integer> equivalenceClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber()), newEquivClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber());
+		Map<CmpVertex,Integer> equivalenceClasses = new HashMap<CmpVertex,Integer>(fsm.getStateNumber()), newEquivClasses = new HashMap<CmpVertex,Integer>(fsm.getStateNumber());
 		Map<Map<Label,Integer>,Integer> sortedRows = new HashMap<Map<Label,Integer>,Integer>();
-		Map<CmpVertex,Map<CmpVertex,List<Label>>> Wdata = new HashMapWithSearch<CmpVertex,Map<CmpVertex,List<Label>>>(fsm.getStateNumber());
-		Map<CmpVertex,Map<CmpVertex,Set<Label>>> distinguishingLabels = new HashMapWithSearch<CmpVertex,Map<CmpVertex,Set<Label>>>(fsm.getStateNumber());
+		Map<CmpVertex,Map<CmpVertex,List<Label>>> Wdata = new HashMap<CmpVertex,Map<CmpVertex,List<Label>>>(fsm.getStateNumber());
+		Map<CmpVertex,Map<CmpVertex,Set<Label>>> distinguishingLabels = new HashMap<CmpVertex,Map<CmpVertex,Set<Label>>>(fsm.getStateNumber());
 		CmpVertex sink = generateSinkState(fsm);
 		for(CmpVertex state:fsm.transitionMatrix.keySet()) 
 			equivalenceClasses.put(state, state.isAccept()?1:0);
@@ -818,23 +789,21 @@ public class WMethod
 		
 		for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 		{
-			Map<CmpVertex,List<Label>> row = new HashMapWithSearch<CmpVertex,List<Label>>(fsm.getStateNumber());
+			Map<CmpVertex,List<Label>> row = new HashMap<CmpVertex,List<Label>>(fsm.getStateNumber());
 			Wdata.put(stateA.getKey(), row);
 
-			Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-			while(stateB_It.hasNext())
-			{
-				Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+			for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+				if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
 				row.put(stateB.getKey(), new LinkedList<Label>());
 			}
 		}
 
-		int equivalenceClassNumber = 0,oldEquivalenceClassNumber=0;
-		int statesEquivalentToSink = 0;
+		int equivalenceClassNumber = 0,oldEquivalenceClassNumber;
+		int statesEquivalentToSink;
 		do
 		{
 			oldEquivalenceClassNumber = equivalenceClassNumber;statesEquivalentToSink = 0;
-			Map<CmpVertex,TransitionRowEqClass> newMap = new HashMapWithSearch<CmpVertex,TransitionRowEqClass>(fsm.getStateNumber());
+			Map<CmpVertex,TransitionRowEqClass> newMap = new HashMap<CmpVertex,TransitionRowEqClass>(fsm.getStateNumber());
 			equivalenceClassNumber = 0;sortedRows.clear();newEquivClasses.clear();
 			int sinkEqClass = equivalenceClasses.get(sink);
 			for(CmpVertex stateA:equivalenceClasses.keySet())
@@ -866,20 +835,17 @@ public class WMethod
 			
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 			{
-				Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-				while(stateB_It.hasNext())
-				{
-					Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+				for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+					if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
 
 					if (stateA.getValue().equals(stateB.getValue()) &&
-							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey())))
-					{// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
+							!newEquivClasses.get(stateA.getKey()).equals(newEquivClasses.get(stateB.getKey()))) {// the two states used to be in the same equivalence class, now they are in different ones, hence we populate the matrix.
 
 						// the two states used to be equivalent but not any more, find inputs which 
 						// distinguish between them and update the histogram to count the number
 						// of inputs which can be used distinguish between states at this stage.
-						Map<CmpVertex,Set<Label>> stateToDist = distinguishingLabels.get(stateA.getKey());
-						if (stateToDist == null) stateToDist = new HashMapWithSearch<CmpVertex,Set<Label>>(fsm.getStateNumber());
+						Map<CmpVertex, Set<Label>> stateToDist = distinguishingLabels.get(stateA.getKey());
+						if (stateToDist == null) stateToDist = new HashMap<CmpVertex, Set<Label>>(fsm.getStateNumber());
 						stateToDist.put(stateB.getKey(), newMap.get(stateA.getKey()).computeDistinguishingLabel(newMap.get(stateB.getKey())));
 						distinguishingLabels.put(stateA.getKey(), stateToDist);
 					}
@@ -902,7 +868,7 @@ public class WMethod
 	
 						if (distinguishingLabels.get(stateA.getKey()).get(stateB.getKey()).contains(topLabel))
 						{
-							List<Label> Wsequence = null;
+							List<Label> Wsequence;
 							if (Wdata.get(stateA.getKey()).containsKey(stateB.getKey()))
 								Wsequence = Wdata.get(stateA.getKey()).get(stateB.getKey());// depending on the ordering in the matrix, either (A,B) or (B,A) should be defined.
 							else
@@ -916,7 +882,7 @@ public class WMethod
 							CmpVertex toB = stateB.getKey() == sink? sink:fsm.transitionMatrix.get(stateB.getKey()).get(topLabel);if (toB == null) toB=sink;
 							
 							Wsequence.add(topLabel);
-							List<Label> Wprevious = null;
+							List<Label> Wprevious;
 							if (Wdata.get(toA).containsKey(toB))
 								Wprevious = Wdata.get(toA).get(toB);// depending on the ordering in the matrix, either (A,B) or (B,A) should be defined.
 							else
@@ -935,7 +901,7 @@ public class WMethod
 				topLabel = computeTopLabel(distinguishingLabels);
 			} // while(topLabel != null)
 			
-			equivalenceClasses = newEquivClasses;newEquivClasses = new HashMapWithSearch<CmpVertex,Integer>(fsm.getStateNumber());
+			equivalenceClasses = newEquivClasses;newEquivClasses = new HashMap<CmpVertex,Integer>(fsm.getStateNumber());
 		}
 		while(equivalenceClassNumber > oldEquivalenceClassNumber);
 
@@ -948,12 +914,9 @@ public class WMethod
 			for(Entry<CmpVertex,Integer> stateA:equivalenceClasses.entrySet())
 				if (sinkAsRealState || stateA.getKey() != sink)
 				{
-					Iterator<Entry<CmpVertex,Integer>> stateB_It = equivalenceClasses.entrySet().iterator();
-					while(stateB_It.hasNext())
-					{
-						Entry<CmpVertex,Integer> stateB = stateB_It.next();if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
-						if (sinkAsRealState || stateB.getKey() != sink)
-						{
+					for (Entry<CmpVertex, Integer> stateB : equivalenceClasses.entrySet()) {
+						if (stateB.getKey().equals(stateA.getKey())) break; // we only process a triangular subset.
+						if (sinkAsRealState || stateB.getKey() != sink) {
 							List<Label> seq = Wdata.get(stateA.getKey()).get(stateB.getKey());
 							result.add(seq);
 						}
@@ -999,16 +962,12 @@ public class WMethod
 		
 		/** Adds the supplied pairs to the collection and returns true if the pair was not yet in the collection
 		 * and false otherwise.
-		 * @param pairAB
+		 * @param pairAB pair to add
 		 * @return false if the pair is already in the collection.
 		 */
 		public boolean addAndCheck(StatePair pairAB)
 		{
-			Set<CmpVertex> row = pairs.get(pairAB.firstElem);
-			if (row == null)
-			{
-				row = new TreeSet<CmpVertex>();pairs.put(pairAB.firstElem,row);
-			}
+			Set<CmpVertex> row = pairs.computeIfAbsent(pairAB.firstElem, k -> new TreeSet<CmpVertex>());
 			boolean result = row.contains(pairAB.secondElem);// if we've just created a row, the outcome will be false, same if the value does not exist.
 			if (!result)
 				row.add(pairAB.secondElem);
@@ -1018,8 +977,8 @@ public class WMethod
 		
 		/** Given a state in the first graph (expected), this method takes set of states related to it and for each of them
 		 * takes states associated with them on the right-hand side of <em>StatePair</em> 
-		 * @param state
-		 * @return
+		 * @param state to handle
+		 * @return states related to the provided state
 		 */
 		public Map<PAIRCOMPATIBILITY,Set<CmpVertex>> statesAssociatedToThoseRelatedTo(CmpVertex state)
 		{
@@ -1028,15 +987,11 @@ public class WMethod
 			if (map != null)
 				for(Entry<CmpVertex,PAIRCOMPATIBILITY> entry:map.entrySet())
 				{
-					Set<CmpVertex> row = result.get(entry.getValue());
-					if (row == null)
-					{
-						row = new TreeSet<CmpVertex>();result.put(entry.getValue(), row);
-					}
+					Set<CmpVertex> row = result.computeIfAbsent(entry.getValue(), k -> new TreeSet<CmpVertex>());
 					Set<CmpVertex> rightHand = pairs.get(entry.getKey());
 					String errorDescrPart1 = "state "+ state+" is mapped with "+entry.getValue().name()+" to "+entry.getKey()+" of the graph ";
 					if (rightHand == null)
-						throw new DifferentFSMException(errorDescrPart1 + "which does not have a corresponding state in the expected graph, only "+pairs.toString()+" are known");
+						throw new DifferentFSMException(errorDescrPart1 + "which does not have a corresponding state in the expected graph, only "+ pairs +" are known");
 					row.addAll(rightHand);
 				}
 			
@@ -1053,11 +1008,7 @@ public class WMethod
 			if (map != null)
 				for(Entry<CmpVertex,PAIRCOMPATIBILITY> entry:map.entrySet())
 				{
-					Set<CmpVertex> row = result.get(entry.getValue());
-					if (row == null)
-					{
-						row = new TreeSet<CmpVertex>();result.put(entry.getValue(), row);
-					}
+					Set<CmpVertex> row = result.computeIfAbsent(entry.getValue(), k -> new TreeSet<CmpVertex>());
 					row.add(entry.getKey());
 				}
 			return result;
@@ -1085,7 +1036,7 @@ public class WMethod
 	 * Unreachable states  are ignored.
 	 * Compatibility labelling other than INCOMPATIBLE is only checked for deterministic graphs.
 	 * <p>
-	 * Note that its not possible to convert pairs to bi-directional transitions and match
+	 * Note that it's not possible to convert pairs to bi-directional transitions and match
 	 * the resulting transition diagrams (see testPair7). All "A" transitions of the diagram have
 	 * the same language and same for the "B"s, which is why
 	 * if there are bi-directional transitions from/to all of "A" and all of "B", then the languages
@@ -1102,143 +1053,148 @@ public class WMethod
 	public static <TARGET_A_TYPE,TARGET_B_TYPE,
 	CACHE_A_TYPE extends CachedData<TARGET_A_TYPE, CACHE_A_TYPE>,
 	CACHE_B_TYPE extends CachedData<TARGET_B_TYPE, CACHE_B_TYPE>> 
-	DifferentFSMException checkM(AbstractLearnerGraph<TARGET_A_TYPE, CACHE_A_TYPE> expectedArg,CmpVertex stateExpectedArg,
-			AbstractLearnerGraph<TARGET_B_TYPE, CACHE_B_TYPE> actualArg,CmpVertex stateActualArg, VERTEX_COMPARISON_KIND compareVertices, boolean checkAssociations)
-{
-	assert stateExpectedArg != null && stateActualArg != null;
-	LearnerGraph expected = null, actual = null;
-	CmpVertex stateActual = null, stateExpected = null;
-	Object expectedArgObject = expectedArg,actualArgObject = actualArg;
-	if ( expectedArgObject instanceof LearnerGraph && actualArgObject instanceof LearnerGraph)
-	{// deterministic case
-		expected = (LearnerGraph)expectedArgObject;actual = (LearnerGraph)actualArgObject;stateActual = stateActualArg;stateExpected = stateExpectedArg;
-	}
-	else
-	{// non-deterministic case
-		try {// This one potentially makes copies of states with different names.
-			expected = expectedArg.pathroutines.buildDeterministicGraph(stateExpectedArg);
-			actual = actualArg.pathroutines.buildDeterministicGraph(stateActualArg);
-		} catch (IncompatibleStatesException e) {
-			Helper.throwUnchecked("failed to build a deterministic version of a supplied graph", e);
-		}
-		stateActual = actual.getInit();stateExpected = expected.getInit();
-	}
-	
-	Queue<StatePair> currentExplorationBoundary = new LinkedList<StatePair>();// FIFO queue
-	CollectionOfPairs statesAddedToBoundary = new CollectionOfPairs(expected,actual);
-	currentExplorationBoundary.add(new StatePair(stateExpected,stateActual));statesAddedToBoundary.addAndCheck(new StatePair(stateExpected,stateActual));
-	switch(compareVertices)
-	{
-	case DEEP:
-		if (!DeterministicDirectedSparseGraph.deepEquals(stateExpected,stateActual))
-			return new DifferentFSMException("vertices "+stateExpected+" and "+stateActual+" have different values of attributes");
-		if (stateActual.getOrigState() == null)
-		{
-			if (stateExpected.getOrigState() != null)
-			return new DifferentFSMException("vertices "+stateExpected+" and "+stateActual+" have different names");
-		}
-		else
-			if (!stateActual.getOrigState().equals(stateExpected.getOrigState()))
-				return new DifferentFSMException("vertices "+stateExpected+" and "+stateActual+" have different names");
-		break;
-	case NAMES:	
-		if (!stateActual.getOrigState().equals(stateExpected.getOrigState()))
-			return new DifferentFSMException("vertices "+stateExpected+" and "+stateActual+" have different names");
-		break;
-	case NONE:// nothing needs doing 
-		break;
-	}
+	DifferentFSMException checkM(
+			AbstractLearnerGraph<TARGET_A_TYPE, CACHE_A_TYPE> expectedArg,CmpVertex stateExpectedArg,
+			AbstractLearnerGraph<TARGET_B_TYPE, CACHE_B_TYPE> actualArg,CmpVertex stateActualArg,
+			VERTEX_COMPARISON_KIND compareVertices, boolean checkAssociations) {
+		assert stateExpectedArg != null && stateActualArg != null;
+		LearnerGraph expected = null, actual = null;
+		CmpVertex stateActual, stateExpected;
 
-	CmpVertex sink = generateSinkState(expected);
-	boolean prefixClosed = expected.config.isPrefixClosed() && actual.config.isPrefixClosed();
-	Map<Label, CmpVertex> sinkRow = expected.createNewRow();
-	while(!currentExplorationBoundary.isEmpty())
-	{
-		StatePair statePair = currentExplorationBoundary.remove();
-		assert statePair.firstElem == sink || expected.transitionMatrix.containsKey(statePair.firstElem) : "state "+statePair.firstElem+" is not known to the expected graph";
-		assert statePair.secondElem == sink || actual.transitionMatrix.containsKey(statePair.secondElem) : "state "+statePair.secondElem+" is not known to the actual graph";
-		if (statePair.firstElem.isAccept() != statePair.secondElem.isAccept())
-			return new DifferentFSMException("states "+statePair.firstElem+" and " + statePair.secondElem+" have a different acceptance labelling between the machines");
+		if (expectedArg.config.getLabelKind() == Configuration.LABELKIND.LABEL_INPUT_OUTPUT && expectedArg.config.getLabelKind() != actualArg.config.getLabelKind())
+			throw new IllegalArgumentException("Cannot compare a Mealy automaton with an LTS");
 
-		Map<Label,CmpVertex> expectedTargets = statePair.firstElem == sink?sinkRow:expected.transitionMatrix.get(statePair.firstElem);
-		Map<Label,CmpVertex> actualTargets = statePair.secondElem == sink?sinkRow:actual.transitionMatrix.get(statePair.secondElem);
-		//if (prefixClosed && expectedTargets.size() != actualTargets.size())// each of them is equal to the keyset size from determinism
-		//	return new DifferentFSMException("different number of transitions from states "+statePair);
-		Set<Label> outgoing = new TreeSet<Label>();outgoing.addAll(expectedTargets.keySet());outgoing.addAll(actualTargets.keySet());
-		for(Label label:outgoing)
-		{
-			CmpVertex nextExpectedState = null;
-			if (!expectedTargets.containsKey(label))
-			{
-				if (prefixClosed)
-					return new DifferentFSMException("no transition with expected label \""+label+"\" from a state \""+statePair.secondElem+"\" corresponding to \""+statePair.firstElem+"\"");
-				
-				nextExpectedState = sink;	
+		boolean mealy = expectedArg.config.getLabelKind() == Configuration.LABELKIND.LABEL_INPUT_OUTPUT;
+
+		if (expectedArg instanceof LearnerGraph && actualArg instanceof LearnerGraph) {// deterministic case
+			expected = (LearnerGraph) expectedArg;
+			actual = (LearnerGraph) actualArg;
+			stateActual = stateActualArg;
+			stateExpected = stateExpectedArg;
+		} else {// non-deterministic case
+			try {// This one potentially makes copies of states with different names.
+				expected = expectedArg.pathroutines.buildDeterministicGraph(stateExpectedArg);
+				actual = actualArg.pathroutines.buildDeterministicGraph(stateActualArg);
+			} catch (IncompatibleStatesException e) {
+				Helper.throwUnchecked("failed to build a deterministic version of a supplied graph", e);
 			}
-			else
-				nextExpectedState = expectedTargets.get(label);
-			assert nextExpectedState != null:"null target for "+label+" from state "+statePair.firstElem+" in row "+expectedTargets;
-			
-			CmpVertex nextActualState = null;
-			if (!actualTargets.containsKey(label))
-			{
-				if (prefixClosed)
-					return new DifferentFSMException("no transition with actual label \""+label+"\" from a state \""+statePair.firstElem+"\" corresponding to \""+statePair.secondElem+"\"");
-				
-				nextActualState = sink;	
-			}
-			else
-				nextActualState = actualTargets.get(label);
-			assert nextActualState != null:"null target for "+label+" from state "+statePair.secondElem+" in row "+actualTargets;
+			assert actual != null;assert expected != null;
+			stateActual = actual.getInit();
+			stateExpected = expected.getInit();
+		}
 
-			StatePair nextPair = new StatePair(nextExpectedState,nextActualState);
-			//System.out.println("outgoing: "+statePair.getR()+","+statePair.getQ()+"-"+label+"->"+nextPair.getR()+","+nextPair.getQ());// elements of the pairs are in reverse order
-			if (statesAddedToBoundary.addAndCheck(nextPair))
-			{
-				switch(compareVertices)
-				{
-				case DEEP:
-					//System.out.println("looking at "+expectedState+" ("+expectedState.getColour()+") and "+tState+" ("+tState.getColour()+") ");
-					if (!DeterministicDirectedSparseGraph.deepEquals(nextExpectedState,nextActualState))
-						return new DifferentFSMException("vertices "+nextExpectedState+" and "+nextActualState+" have different values of attributes");
-					if (nextActualState.getOrigState() == null)
-					{
-						if (nextExpectedState.getOrigState() != null)
-							return new DifferentFSMException("vertices "+nextExpectedState+" and "+nextActualState+" have different names");
-					}
-					else
-						if (!nextActualState.getOrigState().equals(nextExpectedState.getOrigState()))
-							return new DifferentFSMException("vertices "+nextExpectedState+" and "+nextActualState+" have different names");
-					break;
-				case NAMES:	
-					if (!nextActualState.getOrigState().equals(nextExpectedState.getOrigState()))
-						return new DifferentFSMException("vertices "+nextExpectedState+" and "+nextActualState+" have different names");
-					break;
-				case NONE:// nothing needs doing 
-					break;
+		Queue<StatePair> currentExplorationBoundary = new LinkedList<StatePair>();// FIFO queue
+		CollectionOfPairs statesAddedToBoundary = new CollectionOfPairs(expected, actual);
+		currentExplorationBoundary.add(new StatePair(stateExpected, stateActual));
+		statesAddedToBoundary.addAndCheck(new StatePair(stateExpected, stateActual));
+		switch (compareVertices) {
+			case DEEP:
+				if (!DeterministicDirectedSparseGraph.deepEquals(stateExpected, stateActual))
+					return new DifferentFSMException("vertices " + stateExpected + " and " + stateActual + " have different values of attributes");
+				if (stateActual.getOrigState() == null) {
+					if (stateExpected.getOrigState() != null)
+						return new DifferentFSMException("vertices " + stateExpected + " and " + stateActual + " have different names");
+				} else if (!stateActual.getOrigState().equals(stateExpected.getOrigState()))
+					return new DifferentFSMException("vertices " + stateExpected + " and " + stateActual + " have different names");
+				break;
+			case NAMES:
+				if (!stateActual.getOrigState().equals(stateExpected.getOrigState()))
+					return new DifferentFSMException("vertices " + stateExpected + " and " + stateActual + " have different names");
+				break;
+			case NONE:// nothing needs doing
+				break;
+		}
+
+		CmpVertex sink = generateSinkState(expected);
+		boolean prefixClosed = expected.config.isPrefixClosed() && actual.config.isPrefixClosed();
+		MapWithSearch<Label,Label, CmpVertex> sinkRow = expected.createNewRow();
+		while (!currentExplorationBoundary.isEmpty()) {
+			StatePair statePair = currentExplorationBoundary.remove();
+			assert statePair.firstElem == sink || expected.transitionMatrix.containsKey(statePair.firstElem) : "state " + statePair.firstElem + " is not known to the expected graph";
+			assert statePair.secondElem == sink || actual.transitionMatrix.containsKey(statePair.secondElem) : "state " + statePair.secondElem + " is not known to the actual graph";
+			if (statePair.firstElem.isAccept() != statePair.secondElem.isAccept())
+				return new DifferentFSMException("states " + statePair.firstElem + " and " + statePair.secondElem + " have a different acceptance labelling between the machines");
+
+			MapWithSearch<Label, Label, CmpVertex> expectedTargets = statePair.firstElem == sink ? sinkRow : expected.transitionMatrix.get(statePair.firstElem);
+			MapWithSearch<Label, Label, CmpVertex> actualTargets = statePair.secondElem == sink ? sinkRow : actual.transitionMatrix.get(statePair.secondElem);
+			//if (prefixClosed && expectedTargets.size() != actualTargets.size())// each of them is equal to the keyset size from determinism
+			//	return new DifferentFSMException("different number of transitions from states "+statePair);
+			Set<Label> outgoing = new TreeSet<>();
+			outgoing.addAll(expectedTargets.keySet());
+			outgoing.addAll(actualTargets.keySet());
+			for (Label label : outgoing) {
+				CmpVertex nextExpectedState;
+				Label expectedLabel = expectedTargets.findKey(label);
+				Label actualLabel = actualTargets.findKey(label);
+
+				if (mealy) {
+					String expectedOutput = ((LabelInputOutput) expectedLabel).output, actualOutput = ((LabelInputOutput) actualLabel).output;
+					if (!expectedOutput.equals(actualOutput))
+						return new DifferentFSMException("different output on input \""+((LabelInputOutput) expectedLabel).input+"\" from a state \"" + statePair);
 				}
 
-				currentExplorationBoundary.offer(nextPair);
+				if (!expectedTargets.containsKey(label)) {
+					if (prefixClosed)
+						return new DifferentFSMException("no transition with expected label \"" + label + "\" from a state \"" + statePair.secondElem + "\" corresponding to \"" + statePair.firstElem + "\"");
+
+					nextExpectedState = sink;
+				} else
+					nextExpectedState = expectedTargets.get(label);
+
+				assert nextExpectedState != null : "null target for " + label + " from state " + statePair.firstElem + " in row " + expectedTargets;
+
+				CmpVertex nextActualState;
+				if (!actualTargets.containsKey(label)) {
+					if (prefixClosed)
+						return new DifferentFSMException("no transition with actual label \"" + label + "\" from a state \"" + statePair.firstElem + "\" corresponding to \"" + statePair.secondElem + "\"");
+
+					nextActualState = sink;
+				} else
+					nextActualState = actualTargets.get(label);
+				assert nextActualState != null : "null target for " + label + " from state " + statePair.secondElem + " in row " + actualTargets;
+
+				StatePair nextPair = new StatePair(nextExpectedState, nextActualState);
+				//System.out.println("outgoing: "+statePair.getR()+","+statePair.getQ()+"-"+label+"->"+nextPair.getR()+","+nextPair.getQ());// elements of the pairs are in reverse order
+				if (statesAddedToBoundary.addAndCheck(nextPair)) {
+					switch (compareVertices) {
+						case DEEP:
+							//System.out.println("looking at "+expectedState+" ("+expectedState.getColour()+") and "+tState+" ("+tState.getColour()+") ");
+							if (!DeterministicDirectedSparseGraph.deepEquals(nextExpectedState, nextActualState))
+								return new DifferentFSMException("vertices " + nextExpectedState + " and " + nextActualState + " have different values of attributes");
+							if (nextActualState.getOrigState() == null) {
+								if (nextExpectedState.getOrigState() != null)
+									return new DifferentFSMException("vertices " + nextExpectedState + " and " + nextActualState + " have different names");
+							} else if (!nextActualState.getOrigState().equals(nextExpectedState.getOrigState()))
+								return new DifferentFSMException("vertices " + nextExpectedState + " and " + nextActualState + " have different names");
+							break;
+						case NAMES:
+							if (!nextActualState.getOrigState().equals(nextExpectedState.getOrigState()))
+								return new DifferentFSMException("vertices " + nextExpectedState + " and " + nextActualState + " have different names");
+							break;
+						case NONE:// nothing needs doing
+							break;
+					}
+
+					currentExplorationBoundary.offer(nextPair);
+				}
 			}
 		}
-	}
 
-	// now iterate through the maps of incompatible states and check them.
-	if (checkAssociations)
-		statesAddedToBoundary.checkPairsAssociatedCorrectly();
-	return null;
-}
+		// now iterate through the maps of incompatible states and check them.
+		if (checkAssociations)
+			statesAddedToBoundary.checkPairsAssociatedCorrectly();
+		return null;
+	}
 
 	public static
 	DifferentFSMException checkReduction(LearnerGraph graphMoreGeneral,CmpVertex stateExpectedArg,
 			LearnerGraph graphLessGeneral,CmpVertex stateActualArg)
 	{
 		assert stateExpectedArg != null && stateActualArg != null;
-		CmpVertex stateActual = stateActualArg, stateExpected = stateExpectedArg;
-		
+
 		Queue<StatePair> currentExplorationBoundary = new LinkedList<StatePair>();// FIFO queue
 		CollectionOfPairs statesAddedToBoundary = new CollectionOfPairs(graphMoreGeneral,graphLessGeneral);
-		currentExplorationBoundary.add(new StatePair(stateExpected,stateActual));statesAddedToBoundary.addAndCheck(new StatePair(stateExpected,stateActual));
+		currentExplorationBoundary.add(new StatePair(stateExpectedArg, stateActualArg));statesAddedToBoundary.addAndCheck(new StatePair(stateExpectedArg, stateActualArg));
 	
 		CmpVertex sink = generateSinkState(graphMoreGeneral);
 		Map<Label, CmpVertex> sinkRow = graphMoreGeneral.createNewRow();
@@ -1257,17 +1213,14 @@ public class WMethod
 			Set<Label> outgoingAll = new TreeSet<Label>();outgoingAll.addAll(moreGeneralTargets.keySet());outgoingAll.addAll(lessGeneralTargets.keySet());
 			for(Label label:outgoingAll)
 			{
-				CmpVertex nextExpectedState = null;
+				CmpVertex nextExpectedState;
 				if (!moreGeneralTargets.containsKey(label))
 					return new DifferentFSMException("no transition with expected label \""+label+"\" from a state \""+statePair.secondElem+"\" corresponding to \""+statePair.firstElem+"\"");
 				nextExpectedState = moreGeneralTargets.get(label);
 				
-				CmpVertex nextActualState = null;
-				if (!lessGeneralTargets.containsKey(label))
-					nextActualState = sink;	
-				else
+				if (lessGeneralTargets.containsKey(label))
 				{// only explore where both can take a transition
-					nextActualState = lessGeneralTargets.get(label);
+					CmpVertex nextActualState = lessGeneralTargets.get(label);
 	
 					StatePair nextPair = new StatePair(nextExpectedState,nextActualState);
 					//System.out.println("outgoing: "+statePair.getR()+","+statePair.getQ()+"-"+label+"->"+nextPair.getR()+","+nextPair.getQ());// elements of the pairs are in reverse order
@@ -1304,8 +1257,7 @@ public class WMethod
 		DifferentFSMException checkM_and_colours(AbstractLearnerGraph<TARGET_A_TYPE, CACHE_A_TYPE> A, AbstractLearnerGraph<TARGET_B_TYPE, CACHE_B_TYPE> B, VERTEX_COMPARISON_KIND howToCompare)
 				
 	{
-		DifferentFSMException ex = WMethod.checkM(A, A.getInit(),B,B.getInit(),howToCompare, true);if (ex != null) return ex;
-		return null;
+		return WMethod.checkM(A, A.getInit(),B,B.getInit(),howToCompare, true);
 	}
 		
 
@@ -1313,8 +1265,9 @@ public class WMethod
 	public static boolean sameStateSet(LearnerGraph expected, LearnerGraph graph)
 	{
 		Set<CmpVertex> A=expected.transitionMatrix.keySet(), B=graph.transitionMatrix.keySet();
-		Set<CmpVertex> AmB = new TreeSet<CmpVertex>(),BmA=new TreeSet<CmpVertex>();
-		AmB.addAll(A);AmB.removeAll(B);BmA.addAll(B);BmA.removeAll(A);
+		Set<CmpVertex> AmB,BmA;
+		AmB = new TreeSet<CmpVertex>(A);AmB.removeAll(B);
+		BmA = new TreeSet<CmpVertex>(B);BmA.removeAll(A);
 		if (!A.equals(B))
 		{
 			System.out.println("different sets of states,\nA-B="+AmB+"\nB-A="+BmA);
@@ -1387,17 +1340,17 @@ public class WMethod
 	public LearnerGraph Permute(FsmPermutator perm, ConvertALabel converter)
 	{
 		ArrayList<Pair<CmpVertex,Label>> transitionList = new ArrayList<Pair<CmpVertex,Label>>();
-		for(Entry<CmpVertex,Map<Label,CmpVertex>> row:coregraph.transitionMatrix.entrySet())
+		for(Entry<CmpVertex,MapWithSearch<Label,Label,CmpVertex>> row:coregraph.transitionMatrix.entrySet())
 			for(Entry<Label,CmpVertex> nextState:row.getValue().entrySet())
 				transitionList.add(new Pair<CmpVertex,Label>(row.getKey(),nextState.getKey()));
 		
 		ArrayList<Pair<CmpVertex,Label>> permutation = perm.getPermutation(transitionList);
 		assert transitionList.size() == permutation.size();
-		StringBuffer newFsm = new StringBuffer();
+		StringBuilder newFsm = new StringBuilder();
 		for(Pair<CmpVertex,Label> p:permutation)
 		{
 			CmpVertex from = p.firstElem;Label label = p.secondElem;
-			newFsm.append("\n"+from+"-"+label+"->"+coregraph.transitionMatrix.get(from).get(label));
+			newFsm.append("\n").append(from).append("-").append(label).append("->").append(coregraph.transitionMatrix.get(from).get(label));
 		}
 
 		LearnerGraph permFsm = buildLearnerGraph(newFsm.toString(), "testDeterminism_perm",coregraph.config, converter);
