@@ -1,55 +1,34 @@
 package statechum.analysis.learning.experiments.PairSelection;
 
-import static statechum.analysis.learning.rpnicore.TestFSMAlgo.buildSet;
-
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.TreeMap;
-import java.util.TreeSet;
-import java.util.concurrent.atomic.AtomicInteger;
-
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
-import org.junit.runners.ParameterizedWithName;
 import org.junit.runners.Parameterized.Parameters;
+import org.junit.runners.ParameterizedWithName;
 import org.junit.runners.ParameterizedWithName.ParametersToString;
-
-import statechum.Configuration;
-import statechum.Helper;
-import statechum.JUConstants;
-import statechum.Label;
-import statechum.StringLabel;
-import statechum.Trace;
+import statechum.*;
 import statechum.DeterministicDirectedSparseGraph.CmpVertex;
-import statechum.Helper.whatToRun;
 import statechum.analysis.learning.MarkovClassifier;
 import statechum.analysis.learning.MarkovModel;
+import statechum.analysis.learning.MarkovModel.MarkovOutcome;
 import statechum.analysis.learning.MarkovModel.UpdatablePairInteger;
 import statechum.analysis.learning.StatePair;
-import statechum.analysis.learning.MarkovModel.MarkovOutcome;
-import statechum.analysis.learning.rpnicore.AbstractLearnerGraph;
-import statechum.analysis.learning.rpnicore.FsmParser;
-import statechum.analysis.learning.rpnicore.LearnerGraph;
-import statechum.analysis.learning.rpnicore.LearnerGraphND;
-import statechum.analysis.learning.rpnicore.TestFSMAlgo;
-import statechum.analysis.learning.rpnicore.WMethod;
+import statechum.analysis.learning.rpnicore.*;
 import statechum.analysis.learning.rpnicore.Transform.ConvertALabel;
 import statechum.analysis.learning.rpnicore.WMethod.DifferentFSMException;
+
+import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
+
+import static statechum.analysis.learning.rpnicore.TestFSMAlgo.buildSet;
 
 @RunWith(ParameterizedWithName.class)
 public class TestMarkovLearner 
 {
 	final Configuration config = Configuration.getDefaultConfiguration().copy();
 	final ConvertALabel converter = new ConvertALabel() {
-		final Map<Label,StringLabel> map = new TreeMap<Label,StringLabel>();
+		final Map<Label,StringLabel> map = new TreeMap<>();
 		
 		@Override
 		public Label convertLabelToLabel(final Label lbl) {
@@ -100,7 +79,7 @@ public class TestMarkovLearner
 	@Parameters
 	public static Collection<Object[]> data() 
 	{
-		return Arrays.asList(new Object[][]{new Object[]{true},new Object[]{false}});
+		return Arrays.asList(new Object[]{true},new Object[]{false});
 	}
 	/** Given a test configuration, returns a textual description of its purpose. 
 	 * 
@@ -109,7 +88,7 @@ public class TestMarkovLearner
 	@ParametersToString
 	public static String parametersToString(Boolean value)
 	{
-		return value.booleanValue()?"using matrix":"no matrix";
+		return value ?"using matrix":"no matrix";
 	}
 	
 	@Before
@@ -120,58 +99,53 @@ public class TestMarkovLearner
 	
 	@Test
 	public void testGetChunks1() {
-		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(new Label[]{}),true),1);
+		List<Trace> l = MarkovModel.splitTrace(new Trace(List.of(),true),1);
 		Assert.assertTrue(l.isEmpty());
 	}
 
 	@Test
 	public void testGetChunks2a() {
-		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(new Label[]{lblA,lblB,lblC}),true),4);
+		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(lblA,lblB,lblC),true),4);
 		Assert.assertTrue(l.isEmpty());
 	}
 
 	@Test
 	public void testGetChunks2b() {
-		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(new Label[]{lblA,lblB,lblC}),true),10);
+		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(lblA,lblB,lblC),true),10);
 		Assert.assertTrue(l.isEmpty());
 	}
 
 	@Test
 	public void testGetChunks3() {
-		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(new Label[]{lblA,lblB,lblC}),true),1);
+		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(lblA,lblB,lblC),true),1);
 		Assert.assertEquals(3,l.size());
-		Assert.assertEquals(new Trace(Arrays.asList(new Label[]{lblA}),true),l.get(0));
-		Assert.assertEquals(new Trace(Arrays.asList(new Label[]{lblB}),true),l.get(1));
-		Assert.assertEquals(new Trace(Arrays.asList(new Label[]{lblC}),true),l.get(2));
+		Assert.assertEquals(new Trace(Collections.singletonList(lblA),true),l.get(0));
+		Assert.assertEquals(new Trace(Collections.singletonList(lblB),true),l.get(1));
+		Assert.assertEquals(new Trace(Collections.singletonList(lblC),true),l.get(2));
 	}
 
 	@Test
 	public void testGetChunks4() {
-		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(new Label[]{lblA,lblB,lblC}),true),2);
+		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(lblA,lblB,lblC),true),2);
 		Assert.assertEquals(2,l.size());
-		Assert.assertEquals(new Trace(Arrays.asList(new Label[]{lblA,lblB}),true),l.get(0));
-		Assert.assertEquals(new Trace(Arrays.asList(new Label[]{lblB,lblC}),true),l.get(1));
+		Assert.assertEquals(new Trace(Arrays.asList(lblA,lblB),true),l.get(0));
+		Assert.assertEquals(new Trace(Arrays.asList(lblB,lblC),true),l.get(1));
 	}
 
 	@Test
 	public void testGetChunks5() {
-		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(new Label[]{lblA,lblB,lblC}),true),3);
+		List<Trace> l = MarkovModel.splitTrace(new Trace(Arrays.asList(lblA,lblB,lblC),true),3);
 		Assert.assertEquals(1,l.size());
-		Assert.assertEquals(new Trace(Arrays.asList(new Label[]{lblA,lblB,lblC}),true),l.get(0));
+		Assert.assertEquals(new Trace(Arrays.asList(lblA,lblB,lblC),true),l.get(0));
 	}
 
 	
 	@Test
 	public void testCreateMarkovMatrixFail()
 	{
-		Helper.checkForCorrectException(new whatToRun() {
-			@SuppressWarnings("unused")
-			@Override
-			public void run() throws NumberFormatException
-			{
-				new MarkovModel(1,true,true,markovPTAUseMatrix);
-			}
-		}, IllegalArgumentException.class, "chunkLen");
+		Helper.checkForCorrectException(
+				() -> new MarkovModel(1,true,true,markovPTAUseMatrix),
+				IllegalArgumentException.class, "chunkLen");
 	}
 	
 	@Test
@@ -183,45 +157,45 @@ public class TestMarkovLearner
 		Map<List<Label>, MarkovOutcome> matrix = m.computePredictionMatrix();
 		Assert.assertEquals(11,matrix.size());
 		
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblA,lblU})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblD,lblC})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblB,lblC})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA,lblB})));
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblC,lblD})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA,lblD})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblB})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblC})));
-		Assert.assertSame(MarkovOutcome.failure, matrix.get(Arrays.asList(new Label[]{lblD})));
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblU})));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(lblA,lblU)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(lblD,lblC)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(lblB,lblC)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(lblA,lblB)));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(lblC,lblD)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(lblA,lblD)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblA)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblB)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblC)));
+		Assert.assertSame(MarkovOutcome.failure, matrix.get(Collections.singletonList(lblD)));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Collections.singletonList(lblU)));
 	}	
 
 	@Test
 	public void testCreateMarkovMatrix2()
 	{
 		MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
-		Set<List<Label>> plusStrings = buildSet(new String[][] { new String[]{"a","u"} },config,converter), minusStrings = new HashSet<List<Label>>();
+		Set<List<Label>> plusStrings = buildSet(new String[][] { new String[]{"a","u"} },config,converter), minusStrings = new HashSet<>();
 		m.createMarkovLearner(plusStrings, minusStrings,false);
 		Map<List<Label>, MarkovOutcome> matrix = m.computePredictionMatrix();
 		Assert.assertEquals(3,matrix.size());
 		
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA,lblU})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblU})));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(lblA,lblU)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblA)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblU)));
 	}
 	
 	@Test
 	public void testCreateMarkovMatrix3a()
 	{
 		MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
-		Set<List<Label>> plusStrings = new HashSet<List<Label>>(), minusStrings = buildSet(new String[][] { new String[]{"a","u"} },config,converter);
+		Set<List<Label>> plusStrings = new HashSet<>(), minusStrings = buildSet(new String[][] { new String[]{"a","u"} },config,converter);
 		m.createMarkovLearner(plusStrings, minusStrings,false);
 		Map<List<Label>, MarkovOutcome> matrix = m.computePredictionMatrix();
 		Assert.assertEquals(3,matrix.size());
 
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblA,lblU})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblU})));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(lblA,lblU)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblA)));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Collections.singletonList(lblU)));
 	}
 	
 	/** Only differs from 3a by the use of chunk_length of 3. The outcome should be the same. */
@@ -229,26 +203,26 @@ public class TestMarkovLearner
 	public void testCreateMarkovMatrix3b()
 	{
 		MarkovModel m = new MarkovModel(3,true,true,markovPTAUseMatrix);
-		Set<List<Label>> plusStrings = new HashSet<List<Label>>(), minusStrings = buildSet(new String[][] { new String[]{"a","u"} },config,converter);
+		Set<List<Label>> plusStrings = new HashSet<>(), minusStrings = buildSet(new String[][] { new String[]{"a","u"} },config,converter);
 		m.createMarkovLearner(plusStrings, minusStrings,false);
 		Map<List<Label>, MarkovOutcome> matrix = m.computePredictionMatrix();
 		Assert.assertEquals(3,matrix.size());
 
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblA,lblU})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblU})));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(lblA,lblU)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblA)));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Collections.singletonList(lblU)));
 	}
 	
 	@Test
 	public void testCreateMarkovMatrix4()
 	{
 		MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
-		Set<List<Label>> plusStrings = new HashSet<List<Label>>(), minusStrings = buildSet(new String[][] { new String[]{"u"} },config,converter);
+		Set<List<Label>> plusStrings = new HashSet<>(), minusStrings = buildSet(new String[][] { new String[]{"u"} },config,converter);
 		m.createMarkovLearner(plusStrings, minusStrings,false);
 		Map<List<Label>, MarkovOutcome> matrix = m.computePredictionMatrix();
 		Assert.assertEquals(1,matrix.size());
 
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblU})));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Collections.singletonList(lblU)));
 	}
 	
 	/** Same as testCreateMarkovMatrix3 but contains an empty trace which is ignored since it does not match any of the valid chunk sizes. */
@@ -256,42 +230,34 @@ public class TestMarkovLearner
 	public void testCreateMarkovMatrix5()
 	{
 		final MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
-		final Set<List<Label>> plusStrings = new HashSet<List<Label>>(), minusStrings = buildSet(new String[][] { new String[]{},new String[]{"a","u"} },config,converter);
+		final Set<List<Label>> plusStrings = new HashSet<>(), minusStrings = buildSet(new String[][] { new String[]{},new String[]{"a","u"} },config,converter);
 		m.createMarkovLearner(plusStrings, minusStrings,false);
 		Map<List<Label>, MarkovOutcome> matrix = m.computePredictionMatrix();
 		Assert.assertEquals(3,matrix.size());
 		
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblA,lblU})));
-		Assert.assertSame(MarkovOutcome.positive, matrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(new Label[]{lblU})));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Arrays.asList(lblA,lblU)));
+		Assert.assertSame(MarkovOutcome.positive, matrix.get(Collections.singletonList(lblA)));
+		Assert.assertSame(MarkovOutcome.negative, matrix.get(Collections.singletonList(lblU)));
 	}
 	
 	@Test
 	public void testCreateMarkovMatrix6()
 	{
 		final MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
-		final Set<List<Label>> plusStrings = new HashSet<List<Label>>(), minusStrings = new HashSet<List<Label>>();
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				m.createMarkovLearner(plusStrings, minusStrings,false);
-			}
-		}, IllegalArgumentException.class, "empty");
+		final Set<List<Label>> plusStrings = new HashSet<>(), minusStrings = new HashSet<>();
+		Helper.checkForCorrectException(
+				() -> m.createMarkovLearner(plusStrings, minusStrings,false),
+				IllegalArgumentException.class, "empty");
 	}
 	
 	@Test
 	public void testCreateMarkovMatrix7()
 	{
 		final MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
-		final Set<List<Label>> plusStrings = new HashSet<List<Label>>(), minusStrings = buildSet(new String[][] { new String[]{},new String[]{} },config,converter);
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				m.createMarkovLearner(plusStrings, minusStrings,false);
-			}
-		}, IllegalArgumentException.class, "empty");
+		final Set<List<Label>> plusStrings = new HashSet<>(), minusStrings = buildSet(new String[][] { new String[]{},new String[]{} },config,converter);
+		Helper.checkForCorrectException(
+				() -> m.createMarkovLearner(plusStrings, minusStrings,false),
+				IllegalArgumentException.class, "empty");
 	}
 	
 	/** Nothing to add because there not enough evidence. */
@@ -637,11 +603,11 @@ public class TestMarkovLearner
 		Assert.assertEquals(m.computePredictionMatrix(),mOther.computePredictionMatrix());
 		
 		// Workaround around a deficiency in the calculation of occurrences of prefixes by the PTA-based construction of Markov model.
-		Assert.assertEquals(new UpdatablePairInteger(2, 0), m.computeOccurrenceMatrix().get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertEquals(new UpdatablePairInteger(1, 0), mOther.computeOccurrenceMatrix().get(Arrays.asList(new Label[]{lblA})));
+		Assert.assertEquals(new UpdatablePairInteger(2, 0), m.computeOccurrenceMatrix().get(Collections.singletonList(lblA)));
+		Assert.assertEquals(new UpdatablePairInteger(1, 0), mOther.computeOccurrenceMatrix().get(Collections.singletonList(lblA)));
 
 		Map<List<Label>,UpdatablePairInteger> mOccurrenceMatrix = m.computeOccurrenceMatrix(), mOtherOccurrenceMatrix = mOther.computeOccurrenceMatrix();
-		mOccurrenceMatrix.remove(Arrays.asList(new Label[]{lblA}));mOtherOccurrenceMatrix.remove(Arrays.asList(new Label[]{lblA}));
+		mOccurrenceMatrix.remove(Collections.singletonList(lblA));mOtherOccurrenceMatrix.remove(Collections.singletonList(lblA));
 		Assert.assertEquals(mOccurrenceMatrix,mOtherOccurrenceMatrix);
 	}
 
@@ -672,9 +638,9 @@ public class TestMarkovLearner
 		Assert.assertEquals(m.computePredictionMatrix(),mOther.computePredictionMatrix());
 		Assert.assertEquals(m.computeOccurrenceMatrix(),mOther.computeOccurrenceMatrix());
 	}
-	
-	@Test
+
 	/** Tests that creating a model from PTA and from initial traces give the same result. */
+	@Test
 	public void testMarkovUpdate4()
 	{
 		MarkovModel m = new MarkovModel(2,true,true,markovPTAUseMatrix);
@@ -696,10 +662,10 @@ public class TestMarkovLearner
 		Map<List<Label>,UpdatablePairInteger> mOccurrenceMatrix = m.computeOccurrenceMatrix();Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(4,mPredictionsMatrix.size());
 		Assert.assertEquals(4,mOccurrenceMatrix.size());
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));Assert.assertEquals(new UpdatablePairInteger(2, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));Assert.assertEquals(new UpdatablePairInteger(2, 0),mOccurrenceMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblB)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(lblA,lblB)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblA)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(lblB,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblB)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(lblB,lblB)));
 	}
 	
 	@Test
@@ -710,13 +676,13 @@ public class TestMarkovLearner
 		new MarkovClassifier(m,graph).updateMarkov(false);
 		Map<List<Label>,UpdatablePairInteger> mOccurrenceMatrix = m.computeOccurrenceMatrix();Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(6,mPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));Assert.assertEquals(new UpdatablePairInteger(2, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));Assert.assertEquals(new UpdatablePairInteger(2, 0),mOccurrenceMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblB)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(lblA,lblB)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblA)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(lblB,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblB)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(lblB,lblB)));
 
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA})));Assert.assertEquals(new UpdatablePairInteger(2, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB})));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Arrays.asList(new Label[]{lblB})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Collections.singletonList(lblA)));Assert.assertEquals(new UpdatablePairInteger(2, 0),mOccurrenceMatrix.get(Collections.singletonList(lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Collections.singletonList(lblB)));Assert.assertEquals(new UpdatablePairInteger(1, 0),mOccurrenceMatrix.get(Collections.singletonList(lblB)));
 	}
 	
 	/** This one is similar to the {@link #testUpdateMarkovSideways1b}, except that there are a few additional negative transitions. */
@@ -729,16 +695,16 @@ public class TestMarkovLearner
 		new MarkovClassifier(m,graph).updateMarkov(false);
 		Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(9,mPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblC})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblC})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblB)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblB)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(lblA,lblC)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(lblB,lblC)));
 
-		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC})));
+		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Collections.singletonList(lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Collections.singletonList(lblB)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Collections.singletonList(lblC)));
 	}
 	
 	/** This one is similar to the {@link #testUpdateMarkovSideways1b}, except that there are a few additional negative transitions and the computation is forward. */
@@ -750,14 +716,14 @@ public class TestMarkovLearner
 		new MarkovClassifier(m,graph).updateMarkov(false);
 		Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(7,mPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblC})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));
+		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblB)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(lblA,lblC)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(lblB,lblA)));
 
-		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC})));
+		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Collections.singletonList(lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Collections.singletonList(lblB)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Collections.singletonList(lblC)));
 		
 		Set<List<Label>> plusStrings = buildSet(new String[][] {},config,converter), minusStrings = buildSet(new String[][] { new String[]{"a","a","a"},new String[]{"a","b","a"},new String[]{"a","c"} },config,converter);
 		MarkovModel another = new MarkovModel(2,true,true,markovPTAUseMatrix);
@@ -765,14 +731,14 @@ public class TestMarkovLearner
 
 		Map<List<Label>,MarkovOutcome> anotherPredictionsMatrix = another.computePredictionMatrix();
 		Assert.assertEquals(7,anotherPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.failure,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB})));
-		Assert.assertEquals(MarkovOutcome.negative,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblC})));
-		Assert.assertEquals(MarkovOutcome.negative,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblA})));
+		Assert.assertEquals(MarkovOutcome.failure,anotherPredictionsMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,anotherPredictionsMatrix.get(Arrays.asList(lblA,lblB)));
+		Assert.assertEquals(MarkovOutcome.negative,anotherPredictionsMatrix.get(Arrays.asList(lblA,lblC)));
+		Assert.assertEquals(MarkovOutcome.negative,anotherPredictionsMatrix.get(Arrays.asList(lblB,lblA)));
 
-		Assert.assertEquals(MarkovOutcome.failure,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblB})));
-		Assert.assertEquals(MarkovOutcome.negative,anotherPredictionsMatrix.get(Arrays.asList(new Label[]{lblC})));
+		Assert.assertEquals(MarkovOutcome.failure,anotherPredictionsMatrix.get(Collections.singletonList(lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,anotherPredictionsMatrix.get(Collections.singletonList(lblB)));
+		Assert.assertEquals(MarkovOutcome.negative,anotherPredictionsMatrix.get(Collections.singletonList(lblC)));
 	}
 
 	@Test
@@ -783,9 +749,9 @@ public class TestMarkovLearner
 		new MarkovClassifier(m,graph).updateMarkov(true);
 		Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(3,mPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblB})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblC})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(lblC,lblB)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblC)));
 	}
 	
 	@Test
@@ -796,17 +762,17 @@ public class TestMarkovLearner
 		new MarkovClassifier(m,graph).updateMarkov(true);
 		Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(9,mPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblC})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblA})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblC)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblA)));
 		
-		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblU})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));
+		Assert.assertEquals(MarkovOutcome.negative,mPredictionsMatrix.get(Arrays.asList(lblB,lblU)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblB)));
 		
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblC})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblU,lblU})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblU})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblU,lblC})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblC)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblU,lblU)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblU)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblU,lblC)));
 	}
 	
 	@Test
@@ -817,14 +783,14 @@ public class TestMarkovLearner
 		new MarkovClassifier(m,graph).updateMarkov(true);
 		Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(6,mPredictionsMatrix.size());
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB,lblC})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblB,lblA})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblB,lblC)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblB,lblA)));
 		
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblU,lblC})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblU,lblA})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblU,lblC)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblU,lblA)));
 		
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblC,lblC})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblC,lblA})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblC,lblC)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblC,lblA)));
 	}
 	
 	@Test
@@ -845,21 +811,21 @@ public class TestMarkovLearner
 		new MarkovClassifier(mSideways,graph).updateMarkov(true);
 		Assert.assertEquals(9,mSideways.computePredictionMatrix().size());Assert.assertTrue(mForward.computePredictionMatrix().isEmpty());
 		
-		List<List<Label>> interestingPaths = new LinkedList<List<Label>>();
+		List<List<Label>> interestingPaths = new LinkedList<>();
 		// nothing in Markov matrix hence no predictions.
 		Assert.assertTrue(new MarkovClassifier(mForward,graph).predictTransitionsFromState(graph.findVertex("B"),null,2,interestingPaths).isEmpty());
-		Assert.assertEquals(1,interestingPaths.size());Assert.assertEquals(Arrays.asList(new Label[]{lblA}),interestingPaths.get(0));
+		Assert.assertEquals(1,interestingPaths.size());Assert.assertEquals(Collections.singletonList(lblA),interestingPaths.get(0));
 		
 		interestingPaths.clear();
 		Map<Label, MarkovOutcome> outcome1 = new MarkovClassifier(mSideways,graph).predictTransitionsFromState(graph.findVertex("B"),null,2,interestingPaths);
-		Assert.assertEquals(1,interestingPaths.size());Assert.assertEquals(Arrays.asList(new Label[]{lblB}),interestingPaths.get(0));
+		Assert.assertEquals(1,interestingPaths.size());Assert.assertEquals(Collections.singletonList(lblB),interestingPaths.get(0));
 		Assert.assertEquals(2,outcome1.size());
 		Assert.assertEquals(MarkovOutcome.negative,outcome1.get(lblU));Assert.assertEquals(MarkovOutcome.positive,outcome1.get(lblB));
 		
 		
 		interestingPaths.clear();
 		outcome1 = new MarkovClassifier(mSideways,graph).predictTransitionsFromState(graph.findVertex("E"),null,2,interestingPaths);
-		Assert.assertEquals(2,interestingPaths.size());Assert.assertEquals(Arrays.asList(new Label[]{lblC}),interestingPaths.get(0));Assert.assertEquals(Arrays.asList(new Label[]{lblU}),interestingPaths.get(1));
+		Assert.assertEquals(2,interestingPaths.size());Assert.assertEquals(Collections.singletonList(lblC),interestingPaths.get(0));Assert.assertEquals(Collections.singletonList(lblU),interestingPaths.get(1));
 		Assert.assertEquals(3,outcome1.size());
 		Assert.assertEquals(MarkovOutcome.positive,outcome1.get(lblU));Assert.assertEquals(MarkovOutcome.positive,outcome1.get(lblC));Assert.assertEquals(MarkovOutcome.positive,outcome1.get(lblA));
 	}		
@@ -874,16 +840,16 @@ public class TestMarkovLearner
 		Map<List<Label>,MarkovOutcome> mPredictionsMatrix = m.computePredictionMatrix();
 		Assert.assertEquals(8,mPredictionsMatrix.size());
 		
-		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblU})));
+		Assert.assertEquals(MarkovOutcome.failure,mPredictionsMatrix.get(Arrays.asList(lblB,lblU)));
 		
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblA})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblA,lblC})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblC,lblC})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblA)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblA,lblC)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblC,lblC)));
 		
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblU,lblB})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblB,lblB})));
-		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(new Label[]{lblU,lblU})));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblU,lblB)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblB,lblB)));
+		Assert.assertEquals(MarkovOutcome.positive,mPredictionsMatrix.get(Arrays.asList(lblU,lblU)));
 	}
 
 	/** Tests that upon a label labelled as invalid, subsequent inconsistency checks are stopped. It is hence equivalent to a single incoming path. */
@@ -960,7 +926,7 @@ public class TestMarkovLearner
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-a->B / A-c->A/ T-a->T-u->T-b->T","testPredictTransitionsFromStatesForward2",config, converter);
 		LearnerGraph extendedGraph = new MarkovClassifier(m,graph2).constructMarkovTentative();
 		Assert.assertNull(WMethod.checkM(FsmParser.buildLearnerGraph("A-a->B / A-c->A / A-u->E / B-b->C / B-u-#D","testPredictTransitionsFromStatesForward3",config, converter), extendedGraph));
-		Assert.assertTrue(extendedGraph.findVertex("T") != null);// extended graph starts as a replica of an original one.
+		Assert.assertNotNull(extendedGraph.findVertex("T"));// extended graph starts as a replica of an original one.
 	}
 
 	/** Here the alphabet is limited to what is an the tentative automaton, hence nothing is added. */
@@ -989,7 +955,7 @@ public class TestMarkovLearner
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-a->B / T-a->T-u->T-b->T-c->T","testPredictTransitionsFromStatesSideways3",config, converter);
 		LearnerGraph extendedGraph = new MarkovClassifier(m,graph2).constructMarkovTentative();
 		Assert.assertNull(WMethod.checkM(FsmParser.buildLearnerGraph("A-a->B / A-c->F","testPredictTransitionsFromStatesForward3",config, converter), extendedGraph));// FSM comparison ignores unreachable states here
-		Assert.assertTrue(extendedGraph.findVertex("T") != null);// extended graph starts as a replica of an original one.
+		Assert.assertNotNull(extendedGraph.findVertex("T"));// extended graph starts as a replica of an original one.
 	}
 
 	/** Same as {@link #testPredictTransitionsFromStatesSideways1()}, except that the path beyond is empty rather than null. */
@@ -1002,7 +968,7 @@ public class TestMarkovLearner
 		Assert.assertEquals(9+graph.getCache().getAlphabet().size(),m.computePredictionMatrix().size());
 		
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-a->B / A-c->A / T-u->T-b->T","testCheckFanoutInconsistencySideways4",config, converter);// T is there to ensure that graph2's alphabet is the same as that of graph.
-		Map<Label, MarkovOutcome> predictions = new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.getInit(),Arrays.asList(new Label[]{}),m.getChunkLen(),null);
+		Map<Label, MarkovOutcome> predictions = new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.getInit(), List.of(),m.getChunkLen(),null);
 		
 		Assert.assertEquals(MarkovOutcome.positive,predictions.get(lblU));
 		Assert.assertEquals(MarkovOutcome.positive,predictions.get(lblC));
@@ -1020,16 +986,12 @@ public class TestMarkovLearner
 		
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-a->B","testPredictTransitionsFromStatesWithPathBeyondCurrentState2",config, converter);
 		
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.getInit(),Arrays.asList(new Label[]{lblC}),m.getChunkLen(),null);
-			}
-		}, IllegalArgumentException.class, "cannot be made by extension");
+		Helper.checkForCorrectException(
+				() -> new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.getInit(), Collections.singletonList(lblC),m.getChunkLen(),null),
+				IllegalArgumentException.class, "cannot be made by extension");
 	}
 	
-	/** Almost the same as {@link #testPredictTransitionsFromStatesForward2()} except that the path beyond is empty rather than null. */
+	/** Almost the same as {@link TestMarkovLearner#testPredictTransitionsFromStatesForward2a()} except that the path beyond is empty rather than null. */
 	@Test
 	public void testPredictTransitionsFromStatesWithPathBeyondCurrentState3()
 	{
@@ -1039,13 +1001,13 @@ public class TestMarkovLearner
 		Assert.assertEquals(4,m.computePredictionMatrix().size());
 		
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-a->B / A-c->A/ T-u->T-b->T","testPredictTransitionsFromStatesForward2",config, converter);
-		Map<Label,MarkovOutcome> outgoing_labels_probabilities=new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.findVertex("B"),Arrays.asList(new Label[]{}),m.getChunkLen(),null);
+		Map<Label,MarkovOutcome> outgoing_labels_probabilities=new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.findVertex("B"), List.of(),m.getChunkLen(),null);
 		Assert.assertEquals(2,outgoing_labels_probabilities.size());
 		Assert.assertEquals(MarkovOutcome.negative,outgoing_labels_probabilities.get(lblU));
 		Assert.assertEquals(MarkovOutcome.positive,outgoing_labels_probabilities.get(lblB));
 	}
 
-	/** Almost the same as {@link #testPredictTransitionsFromStatesForward2()} except that the path beyond is not empty. Transition <i>d</i> from A to B is not present in Markov, so routinely there will be no prediction. Nevertheless, 
+	/** Almost the same as {@link #testPredictTransitionsFromStatesForward2a()} except that the path beyond is not empty. Transition <i>d</i> from A to B is not present in Markov, so routinely there will be no prediction. Nevertheless,
 	 * there is one because we assume that the considered paths leading to the state B of interest all start with label b. 
 	 */
 	@Test
@@ -1057,13 +1019,13 @@ public class TestMarkovLearner
 		Assert.assertEquals(4,m.computePredictionMatrix().size());
 		
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-d->B / A-c->A/ T-u->T-b->T","testPredictTransitionsFromStatesForward2",config, converter);
-		Map<Label,MarkovOutcome> outgoing_labels_probabilities=new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.findVertex("B"),Arrays.asList(new Label[]{lblA}),m.getChunkLen(),null);
+		Map<Label,MarkovOutcome> outgoing_labels_probabilities=new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.findVertex("B"), Collections.singletonList(lblA),m.getChunkLen(),null);
 		Assert.assertEquals(2,outgoing_labels_probabilities.size());
 		Assert.assertEquals(MarkovOutcome.negative,outgoing_labels_probabilities.get(lblU));
 		Assert.assertEquals(MarkovOutcome.positive,outgoing_labels_probabilities.get(lblB));
 	}
 
-	/** Almost the same as {@link #testPredictTransitionsFromStatesForward2()} except that the path beyond is not empty. Transition <i>d</i> from A to B is not present in Markov, so routinely there will be no prediction. Nevertheless, 
+	/** Almost the same as {@link TestMarkovLearner#testPredictTransitionsFromStatesForward2a} except that the path beyond is not empty. Transition <i>d</i> from A to B is not present in Markov, so routinely there will be no prediction. Nevertheless,
 	 * there is one because we assume that the considered paths leading to the state B of interest all start with paths a b. 
 	 */
 	@Test
@@ -1075,13 +1037,9 @@ public class TestMarkovLearner
 		Assert.assertEquals(4,m.computePredictionMatrix().size());
 		
 		final LearnerGraph graph2 = FsmParser.buildLearnerGraph("A-d->B / A-c->A/ T-u->T-b->T","testPredictTransitionsFromStatesForward2",config, converter);
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.findVertex("B"),Arrays.asList(new Label[]{lblA,lblB}),m.getChunkLen(),null);
-			}
-		}, IllegalArgumentException.class, "supplied path");
+		Helper.checkForCorrectException(
+				() -> new MarkovClassifier(m, graph2).predictTransitionsFromState(graph2.findVertex("B"),Arrays.asList(lblA,lblB),m.getChunkLen(),null),
+				IllegalArgumentException.class, "supplied path");
 	}
 
 	
@@ -1443,7 +1401,7 @@ public class TestMarkovLearner
 		
 		Assert.assertNull(graph.findVertex("A").getColour());Assert.assertNull(graph.findVertex("D").getColour());
 
-		Set<CmpVertex> expected = new TreeSet<CmpVertex>(Arrays.asList(new CmpVertex[]{graph.findVertex("A")})), actual = new TreeSet<CmpVertex>(graph.additionalExplorationRoot);
+		Set<CmpVertex> expected = new TreeSet<>(Collections.singletonList(graph.findVertex("A"))), actual = new TreeSet<>(graph.additionalExplorationRoot);
 		Assert.assertEquals(expected,actual);
 	}
 	
@@ -1456,7 +1414,7 @@ public class TestMarkovLearner
 		Assert.assertNull(graph.findVertex("A").getColour());Assert.assertNull(graph.findVertex("B").getColour());Assert.assertNull(graph.findVertex("C").getColour());
 		Assert.assertSame(JUConstants.RED, graph.findVertex("D").getColour());
 
-		Set<CmpVertex> expected = new TreeSet<CmpVertex>(Arrays.asList(new CmpVertex[]{graph.findVertex("B"),graph.findVertex("C")})), actual = new TreeSet<CmpVertex>(graph.additionalExplorationRoot);
+		Set<CmpVertex> expected = new TreeSet<>(Arrays.asList(graph.findVertex("B"), graph.findVertex("C"))), actual = new TreeSet<>(graph.additionalExplorationRoot);
 		Assert.assertEquals(expected,actual);
 	}
 	
@@ -1465,13 +1423,9 @@ public class TestMarkovLearner
 	{
 		final LearnerGraph graph = FsmParser.buildLearnerGraph("A-a->C-a->A-b->B-a->D / C-b->C","testLabelStatesAwayFromRoot1",config, converter);
 		
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				MarkovPassivePairSelection.labelStatesAwayFromRoot(graph,3);
-			}
-		}, IllegalArgumentException.class, "no states");
+		Helper.checkForCorrectException(
+				() -> MarkovPassivePairSelection.labelStatesAwayFromRoot(graph,3),
+				IllegalArgumentException.class, "no states");
 	}
 
 	@Test
@@ -1479,13 +1433,9 @@ public class TestMarkovLearner
 	{
 		final LearnerGraph graph = FsmParser.buildLearnerGraph("A-a->D-b->C / A-c->B-b->C / B-u->E","testIdentifyUncoveredTransitions1a",config, converter);
 		final LearnerGraph reference = FsmParser.buildLearnerGraph("A-a->D-b->C / A-c->B-b->C / B-u->E / B-x->B / T-b->T-u->T","testIdentifyUncoveredTransitions1b",config, converter);
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				MarkovPassivePairSelection.identifyUncoveredTransitions(graph,reference);
-			}
-		}, IllegalArgumentException.class, "PTA is not");		
+		Helper.checkForCorrectException(
+				() -> MarkovPassivePairSelection.identifyUncoveredTransitions(graph,reference),
+				IllegalArgumentException.class, "PTA is not");
 	}
 	
 	@Test
@@ -1621,13 +1571,9 @@ public class TestMarkovLearner
 	{
 		final LearnerGraph graph = FsmParser.buildLearnerGraph("A-a->D-b->C / A-c->B-b->C1 / B-u->E","testIdentifyUncoveredTransitions2a",config, converter);
 		final LearnerGraph reference = FsmParser.buildLearnerGraph("A-a->D","testIdentifyUncoveredTransitions3",config, converter);
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				MarkovPassivePairSelection.identifyUncoveredTransitions(graph,reference);
-			}
-		}, IllegalArgumentException.class, "coverage has more transitions");		
+		Helper.checkForCorrectException(
+				() -> MarkovPassivePairSelection.identifyUncoveredTransitions(graph,reference),
+				IllegalArgumentException.class, "coverage has more transitions");
 	}
 	
 	@Test
@@ -1644,20 +1590,16 @@ public class TestMarkovLearner
 	{
 		final LearnerGraph graph = FsmParser.buildLearnerGraph("A-a->D-b->C / A-c->B-b->C1 / B-u->E","testIdentifyUncoveredTransitions2a",config, converter);
 		final LearnerGraph reference = FsmParser.buildLearnerGraph("A-a->D","testIdentifyUncoveredTransitions3",config, converter);
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				MarkovPassivePairSelection.trimUncoveredTransitions(graph,reference);
-			}
-		}, IllegalArgumentException.class, "coverage has more transitions");		
+		Helper.checkForCorrectException(
+				() -> MarkovPassivePairSelection.trimUncoveredTransitions(graph,reference),
+				IllegalArgumentException.class, "coverage has more transitions");
 	}
 	
 	@Test
 	public void testStatesIdentifiedUsingUniques1a()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
-		Set<CmpVertex> uniqueStates=new TreeSet<CmpVertex>();Collection<List<Label>> invalidSequences =new LinkedList<List<Label>>();
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("a", config, converter)));
+		Set<CmpVertex> uniqueStates= new TreeSet<>();Collection<List<Label>> invalidSequences = new LinkedList<>();
 		MarkovPassivePairSelection.statesIdentifiedUsingUniques(FsmParser.buildLearnerGraph("A-a->B-a->C","testIdentifyUncoveredTransitions2a",config, converter), uniques,uniqueStates,invalidSequences);
 		Assert.assertTrue(uniqueStates.isEmpty());Assert.assertEquals(uniques,invalidSequences);Assert.assertNotSame(uniques, invalidSequences);
 	}
@@ -1665,7 +1607,7 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques1b()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("a", config, converter)));
 		Collection<CmpVertex> uniqueStates=MarkovPassivePairSelection.statesIdentifiedUsingSequences(FsmParser.buildLearnerGraph("A-a->B-a->C","testIdentifyUncoveredTransitions2a",config, converter), uniques);
 		Assert.assertEquals(2,uniqueStates.size());
 		Iterator<CmpVertex> uniqueVertices = uniqueStates.iterator(); 
@@ -1676,8 +1618,8 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques1c()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("b", config, converter)}));
-		Set<CmpVertex> uniqueStates=new TreeSet<CmpVertex>();Collection<List<Label>> invalidSequences =new LinkedList<List<Label>>();
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("b", config, converter)));
+		Set<CmpVertex> uniqueStates= new TreeSet<>();Collection<List<Label>> invalidSequences = new LinkedList<>();
 		MarkovPassivePairSelection.statesIdentifiedUsingUniques(FsmParser.buildLearnerGraph("A-a->B-a->C","testIdentifyUncoveredTransitions2a",config, converter), uniques,uniqueStates,invalidSequences);
 		Assert.assertTrue(uniqueStates.isEmpty());Assert.assertTrue(invalidSequences.isEmpty());
 	}
@@ -1685,7 +1627,7 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques1d()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("b", config, converter)}));
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("b", config, converter)));
 		Collection<CmpVertex> uniqueStates=MarkovPassivePairSelection.statesIdentifiedUsingSequences(FsmParser.buildLearnerGraph("A-a->B-a->C","testIdentifyUncoveredTransitions2a",config, converter), uniques);
 		Assert.assertTrue(uniqueStates.isEmpty());
 	}
@@ -1693,8 +1635,8 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques2a()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
-		Set<CmpVertex> uniqueStates=new TreeSet<CmpVertex>();Collection<List<Label>> invalidSequences =new LinkedList<List<Label>>();
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("a", config, converter)));
+		Set<CmpVertex> uniqueStates= new TreeSet<>();Collection<List<Label>> invalidSequences = new LinkedList<>();
 		MarkovPassivePairSelection.statesIdentifiedUsingUniques(FsmParser.buildLearnerGraph("A-a->B-b->C","testIdentifyUncoveredTransitions2a",config, converter), uniques,uniqueStates,invalidSequences);
 		Assert.assertEquals(1,uniqueStates.size());
 		Assert.assertEquals("A",uniqueStates.iterator().next().getStringId());Assert.assertTrue(invalidSequences.isEmpty());
@@ -1703,7 +1645,7 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques2b()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("a", config, converter)));
 		Collection<CmpVertex> uniqueStates=MarkovPassivePairSelection.statesIdentifiedUsingSequences(FsmParser.buildLearnerGraph("A-a->B-b->C","testIdentifyUncoveredTransitions2b",config, converter), uniques);
 		Assert.assertEquals(1,uniqueStates.size());
 		Assert.assertEquals("A",uniqueStates.iterator().next().getStringId());
@@ -1712,8 +1654,8 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques3a()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
-		Set<CmpVertex> uniqueStates=new TreeSet<CmpVertex>();Collection<List<Label>> invalidSequences =new LinkedList<List<Label>>();
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Arrays.asList(AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)));
+		Set<CmpVertex> uniqueStates= new TreeSet<>();Collection<List<Label>> invalidSequences = new LinkedList<>();
 		MarkovPassivePairSelection.statesIdentifiedUsingUniques(FsmParser.buildLearnerGraph("A-a->B-a->C","testIdentifyUncoveredTransitions3a",config, converter), uniques,uniqueStates,invalidSequences);
 		Assert.assertEquals(1,uniqueStates.size());
 		Iterator<CmpVertex> uniqueVertices = uniqueStates.iterator(); 
@@ -1723,7 +1665,7 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques3b()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Arrays.asList(AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)));
 		Collection<CmpVertex> uniqueStates=MarkovPassivePairSelection.statesIdentifiedUsingSequences(FsmParser.buildLearnerGraph("A-a->B-a->C","testIdentifyUncoveredTransitions3a",config, converter), uniques);
 		Assert.assertEquals(1,uniqueStates.size());
 		Iterator<CmpVertex> uniqueVertices = uniqueStates.iterator(); 
@@ -1733,8 +1675,8 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques3c()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
-		Set<CmpVertex> uniqueStates=new TreeSet<CmpVertex>();Collection<List<Label>> invalidSequences =new LinkedList<List<Label>>();
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Arrays.asList(AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)));
+		Set<CmpVertex> uniqueStates= new TreeSet<>();Collection<List<Label>> invalidSequences = new LinkedList<>();
 		MarkovPassivePairSelection.statesIdentifiedUsingUniques(FsmParser.buildLearnerGraph("A-a->B-a->C-a->D","testIdentifyUncoveredTransitions3b",config, converter), uniques,uniqueStates,invalidSequences);
 		Assert.assertTrue(uniqueStates.isEmpty());Assert.assertEquals(uniques,invalidSequences);Assert.assertNotSame(uniques, invalidSequences);
 	}
@@ -1742,7 +1684,7 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques3d()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)}));
+		Collection<List<Label>> uniques = new LinkedList<>();uniques.add(Arrays.asList(AbstractLearnerGraph.generateNewLabel("a", config, converter),AbstractLearnerGraph.generateNewLabel("a", config, converter)));
 		Collection<CmpVertex> uniqueStates=MarkovPassivePairSelection.statesIdentifiedUsingSequences(FsmParser.buildLearnerGraph("A-a->B-a->C-a->D","testIdentifyUncoveredTransitions3b",config, converter), uniques);
 		Assert.assertEquals(2,uniqueStates.size());
 		Iterator<CmpVertex> uniqueVertices = uniqueStates.iterator(); 
@@ -1753,9 +1695,9 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques4a()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();
-		uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter)}));uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("b", config, converter)}));
-		Set<CmpVertex> uniqueStates=new TreeSet<CmpVertex>();Collection<List<Label>> invalidSequences =new LinkedList<List<Label>>();
+		Collection<List<Label>> uniques = new LinkedList<>();
+		uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("a", config, converter)));uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("b", config, converter)));
+		Set<CmpVertex> uniqueStates= new TreeSet<>();Collection<List<Label>> invalidSequences = new LinkedList<>();
 		MarkovPassivePairSelection.statesIdentifiedUsingUniques(FsmParser.buildLearnerGraph("A-a->B-b->C","testIdentifyUncoveredTransitions2a",config, converter), uniques,uniqueStates,invalidSequences);
 		Assert.assertEquals(2,uniqueStates.size());
 		Iterator<CmpVertex> uniqueVertices = uniqueStates.iterator(); 
@@ -1767,8 +1709,8 @@ public class TestMarkovLearner
 	@Test
 	public void testStatesIdentifiedUsingUniques4b()
 	{
-		Collection<List<Label>> uniques = new LinkedList<List<Label>>();
-		uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("a", config, converter)}));uniques.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("b", config, converter)}));
+		Collection<List<Label>> uniques = new LinkedList<>();
+		uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("a", config, converter)));uniques.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("b", config, converter)));
 		Collection<CmpVertex> uniqueStates=MarkovPassivePairSelection.statesIdentifiedUsingSequences(FsmParser.buildLearnerGraph("A-a->B-b->C","testIdentifyUncoveredTransitions2b",config, converter), uniques);
 		Assert.assertEquals(2,uniqueStates.size());
 		Iterator<CmpVertex> uniqueVertices = uniqueStates.iterator(); 
@@ -1779,7 +1721,7 @@ public class TestMarkovLearner
 	@Test
 	public void testCollectionOfSetsToPair1()
 	{
-		Collection<Set<CmpVertex>> collectionOfSets = new LinkedList<Set<CmpVertex>>();
+		Collection<Set<CmpVertex>> collectionOfSets = new LinkedList<>();
 		List<StatePair> outcome = MarkovClassifier.collectionOfSetsToPairs(collectionOfSets);
 		Assert.assertTrue(outcome.isEmpty());
 	}
@@ -1787,9 +1729,9 @@ public class TestMarkovLearner
 	@Test
 	public void testCollectionOfSetsToPair2()
 	{
-		Collection<Set<CmpVertex>> collectionOfSets = new LinkedList<Set<CmpVertex>>();
+		Collection<Set<CmpVertex>> collectionOfSets = new LinkedList<>();
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B-a->C-a->D-a->E","testIdentifyUncoveredTransitions3a",config, converter);
-		Set<CmpVertex> P=new TreeSet<CmpVertex>(),Q=new TreeSet<CmpVertex>(),R=new TreeSet<CmpVertex>();
+		Set<CmpVertex> P= new TreeSet<>(),Q= new TreeSet<>(),R= new TreeSet<>();
 		P.add(gr.findVertex("A"));Q.add(gr.findVertex("B"));Q.add(gr.findVertex("C"));Q.add(gr.findVertex("D"));Q.add(gr.findVertex("E"));
 		collectionOfSets.add(P);collectionOfSets.add(Q);collectionOfSets.add(R);
 		
@@ -1805,9 +1747,9 @@ public class TestMarkovLearner
 	@Test
 	public void testCollectionOfSetsToPair3()
 	{
-		Collection<Set<CmpVertex>> collectionOfSets = new LinkedList<Set<CmpVertex>>();
+		Collection<Set<CmpVertex>> collectionOfSets = new LinkedList<>();
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B-a->C-a->D-a->E","testIdentifyUncoveredTransitions3a",config, converter);
-		Set<CmpVertex> P=new TreeSet<CmpVertex>(),R=new TreeSet<CmpVertex>();
+		Set<CmpVertex> P= new TreeSet<>(),R= new TreeSet<>();
 		P.add(gr.findVertex("A"));
 		collectionOfSets.add(P);collectionOfSets.add(R);
 		
@@ -1820,7 +1762,7 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath1()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-b->D-a->E / D-c->D / E-c->E","testBuildVerticesToMergeForPath1",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));
 		
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
@@ -1833,12 +1775,13 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath2()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-b->D-a->E / D-c->D / E-d->E","testBuildVerticesToMergeForPath1",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets = new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(1,collectionOfSets.size());
 		Iterator<Set<CmpVertex>> iterator = collectionOfSets.iterator();
-		Set<CmpVertex> partA = new TreeSet<CmpVertex>();partA.addAll(gr.transitionMatrix.keySet());partA.remove(gr.findVertex("E"));
+		Set<CmpVertex> partA = new TreeSet<>(gr.transitionMatrix.keySet());
+		partA.remove(gr.findVertex("E"));
 		
 		Assert.assertEquals(partA, iterator.next());
 	}
@@ -1848,13 +1791,14 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath3()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-b->D-a->E / D-c->D / E-d->E","testBuildVerticesToMergeForPath3",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(2,collectionOfSets.size());
 		Iterator<Set<CmpVertex>> iterator = collectionOfSets.iterator();
-		Set<CmpVertex> partA = new TreeSet<CmpVertex>();partA.addAll(gr.transitionMatrix.keySet());partA.remove(gr.findVertex("E"));
-		Set<CmpVertex> partB = new TreeSet<CmpVertex>();partB.add(gr.findVertex("E"));
+		Set<CmpVertex> partA = new TreeSet<>(gr.transitionMatrix.keySet());
+		partA.remove(gr.findVertex("E"));
+		Set<CmpVertex> partB = new TreeSet<>();partB.add(gr.findVertex("E"));
 		
 		Assert.assertEquals(partA, iterator.next());
 		Assert.assertEquals(partB, iterator.next());
@@ -1865,13 +1809,14 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath4()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-d->D-a->E / D-c->D / E-d->E","testBuildVerticesToMergeForPath4",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(2,collectionOfSets.size());
 		Iterator<Set<CmpVertex>> iterator = collectionOfSets.iterator();
-		Set<CmpVertex> partA = new TreeSet<CmpVertex>();partA.addAll(gr.transitionMatrix.keySet());partA.remove(gr.findVertex("E"));partA.remove(gr.findVertex("C"));
-		Set<CmpVertex> partB = new TreeSet<CmpVertex>();partB.add(gr.findVertex("E"));partB.add(gr.findVertex("C"));
+		Set<CmpVertex> partA = new TreeSet<>(gr.transitionMatrix.keySet());
+		partA.remove(gr.findVertex("E"));partA.remove(gr.findVertex("C"));
+		Set<CmpVertex> partB = new TreeSet<>();partB.add(gr.findVertex("E"));partB.add(gr.findVertex("C"));
 		
 		Assert.assertEquals(partA, iterator.next());
 		Assert.assertEquals(partB, iterator.next());
@@ -1881,7 +1826,7 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath5()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-b->D-a->E / D-c->D / E-c->E-d->F-d->F-u->G-u->G","testBuildVerticesToMergeForPath5",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));paths.add(Arrays.asList(new Label[]{lblU}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));paths.add(Collections.singletonList(lblU));
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(1,collectionOfSets.size());
 		Assert.assertEquals(gr.transitionMatrix.keySet(), collectionOfSets.iterator().next());
@@ -1892,7 +1837,7 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath6()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("B-a->C-b->D-a->E / D-c->D / E-c->E-d->F-d->F-u->G-u->G / Z-a->B / Z-b->Z","testBuildVerticesToMergeForPath6",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));paths.add(Arrays.asList(new Label[]{lblU}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));paths.add(Collections.singletonList(lblU));
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(1,collectionOfSets.size());
 		Assert.assertEquals(gr.transitionMatrix.keySet(), collectionOfSets.iterator().next());
@@ -1903,7 +1848,7 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath7a()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("B-a->C-b->D-a->E / D-c->D / E-c->E-d->F-d->F-u->G-u->G / Z-a->B / Z-b->Z","testBuildVerticesToMergeForPath6",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();
+		Collection<List<Label>> paths = new LinkedList<>();
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertTrue(collectionOfSets.isEmpty());
 	}
@@ -1913,7 +1858,7 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath7b()
 	{
 		LearnerGraph gr=new LearnerGraph(config);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertTrue(collectionOfSets.isEmpty());
 	}
@@ -1923,13 +1868,13 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath8()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-d->D-a->E / D-c->D / E-d->E-e->F-d->F-u->F / G-u->G","testBuildVerticesToMergeForPath8",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));paths.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("e", config, converter)}));paths.add(Arrays.asList(new Label[]{lblU}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));paths.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("e", config, converter)));paths.add(Collections.singletonList(lblU));
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(2,collectionOfSets.size());
 		Iterator<Set<CmpVertex>> iterator = collectionOfSets.iterator();
-		Set<CmpVertex> partA = new TreeSet<CmpVertex>();partA.add(gr.findVertex("A"));partA.add(gr.findVertex("B"));partA.add(gr.findVertex("D"));
-		Set<CmpVertex> partB = new TreeSet<CmpVertex>();partB.add(gr.findVertex("C"));partB.add(gr.findVertex("E"));partB.add(gr.findVertex("F"));partB.add(gr.findVertex("G"));
+		Set<CmpVertex> partA = new TreeSet<>();partA.add(gr.findVertex("A"));partA.add(gr.findVertex("B"));partA.add(gr.findVertex("D"));
+		Set<CmpVertex> partB = new TreeSet<>();partB.add(gr.findVertex("C"));partB.add(gr.findVertex("E"));partB.add(gr.findVertex("F"));partB.add(gr.findVertex("G"));
 		
 		Assert.assertEquals(partA, iterator.next());
 		Assert.assertEquals(partB, iterator.next());
@@ -1940,13 +1885,13 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath9()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-d->D-a->E / D-c->D / E-d->E-e->F-d->F-u->F / G-e->G","testBuildVerticesToMergeForPath8",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));paths.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("e", config, converter)}));paths.add(Arrays.asList(new Label[]{lblU}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));paths.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("e", config, converter)));paths.add(Collections.singletonList(lblU));
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(2,collectionOfSets.size());
 		Iterator<Set<CmpVertex>> iterator = collectionOfSets.iterator();
-		Set<CmpVertex> partA = new TreeSet<CmpVertex>();partA.add(gr.findVertex("A"));partA.add(gr.findVertex("B"));partA.add(gr.findVertex("D"));
-		Set<CmpVertex> partB = new TreeSet<CmpVertex>();partB.add(gr.findVertex("C"));partB.add(gr.findVertex("E"));partB.add(gr.findVertex("F"));partB.add(gr.findVertex("G"));
+		Set<CmpVertex> partA = new TreeSet<>();partA.add(gr.findVertex("A"));partA.add(gr.findVertex("B"));partA.add(gr.findVertex("D"));
+		Set<CmpVertex> partB = new TreeSet<>();partB.add(gr.findVertex("C"));partB.add(gr.findVertex("E"));partB.add(gr.findVertex("F"));partB.add(gr.findVertex("G"));
 		
 		Assert.assertEquals(partA, iterator.next());
 		Assert.assertEquals(partB, iterator.next());
@@ -1957,21 +1902,21 @@ public class TestMarkovLearner
 	public void testBuildVerticesToMergeForPath10()
 	{
 		LearnerGraph gr=FsmParser.buildLearnerGraph("A-a->B / A-b->A / B-a->C-d->D-a->E / D-c->D / E-d->E-e->F-d->F-u->F / G-f->G","testBuildVerticesToMergeForPath8",config, converter);
-		Collection<List<Label>> paths = new LinkedList<List<Label>>();paths.add(Arrays.asList(new Label[]{lblA}));paths.add(Arrays.asList(new Label[]{lblB}));paths.add(Arrays.asList(new Label[]{lblC}));paths.add(Arrays.asList(new Label[]{lblD}));paths.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("e", config, converter)}));paths.add(Arrays.asList(new Label[]{AbstractLearnerGraph.generateNewLabel("f", config, converter)}));paths.add(Arrays.asList(new Label[]{lblU}));
+		Collection<List<Label>> paths = new LinkedList<>();paths.add(Collections.singletonList(lblA));paths.add(Collections.singletonList(lblB));paths.add(Collections.singletonList(lblC));paths.add(Collections.singletonList(lblD));paths.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("e", config, converter)));paths.add(Collections.singletonList(AbstractLearnerGraph.generateNewLabel("f", config, converter)));paths.add(Collections.singletonList(lblU));
 		//for(LearnerGraph g:grForPaths.values())	System.out.println(g.transitionMatrix);
 		Collection<Set<CmpVertex>> collectionOfSets=new MarkovClassifier(new MarkovModel(2,true,true,markovPTAUseMatrix),gr).buildVerticesToMergeForPaths(paths);
 		Assert.assertEquals(3,collectionOfSets.size());
 		Iterator<Set<CmpVertex>> iterator = collectionOfSets.iterator();
-		Set<CmpVertex> partA = new TreeSet<CmpVertex>();partA.add(gr.findVertex("A"));partA.add(gr.findVertex("B"));partA.add(gr.findVertex("D"));
-		Set<CmpVertex> partB = new TreeSet<CmpVertex>();partB.add(gr.findVertex("C"));partB.add(gr.findVertex("E"));partB.add(gr.findVertex("F"));
-		Set<CmpVertex> partC = new TreeSet<CmpVertex>();partC.add(gr.findVertex("G"));
+		Set<CmpVertex> partA = new TreeSet<>();partA.add(gr.findVertex("A"));partA.add(gr.findVertex("B"));partA.add(gr.findVertex("D"));
+		Set<CmpVertex> partB = new TreeSet<>();partB.add(gr.findVertex("C"));partB.add(gr.findVertex("E"));partB.add(gr.findVertex("F"));
+		Set<CmpVertex> partC = new TreeSet<>();partC.add(gr.findVertex("G"));
 		
 		Assert.assertEquals(partA, iterator.next());
 		Assert.assertEquals(partB, iterator.next());
 		Assert.assertEquals(partC, iterator.next());
 	}
 
-	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link TestPathTracing}. */
+	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link statechum.analysis.learning.TestPathTracing}. */
 	@Test
 	public void testTracePath1()
 	{
@@ -1981,12 +1926,12 @@ public class TestMarkovLearner
 		{
 			ndFSM.addVertex(ndFSM.addVertex(fsm.findVertex("A"), true, lblA),true,lblA);
 		}
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","b"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a"}),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of(),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","b"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a"),config,converter),fsm.findVertex("A")));
 	}
 	
-	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link TestPathTracing}. */
+	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link statechum.analysis.learning.TestPathTracing}. */
 	@Test
 	public void testTracePath2()
 	{
@@ -1998,13 +1943,13 @@ public class TestMarkovLearner
 			ndFSM.addVertex(AA, true, lblA);ndFSM.addVertex(AA, true, lblC);
 		}
 		Assert.assertEquals(7,ndFSM.getStateNumber());
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","c"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","b"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a","a"}),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","c"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","b"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a","a"),config,converter),fsm.findVertex("A")));
 	}
 
-	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link TestPathTracing}. */
+	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link statechum.analysis.learning.TestPathTracing}. */
 	@Test
 	public void testTracePath3()
 	{
@@ -2016,14 +1961,14 @@ public class TestMarkovLearner
 			ndFSM.addVertex(ndFSM.addVertex(ndFSM.addVertex(fsm.findVertex("A"), true, lblA),true,lblA),true,lblA);
 		}
 		Assert.assertEquals(10,ndFSM.getStateNumber());
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","b"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a","a","a"}),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of(),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","b"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a","a","a"),config,converter),fsm.findVertex("A")));
 	}
 
-	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link TestPathTracing}. */
+	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link statechum.analysis.learning.TestPathTracing}. */
 	@Test
 	public void testTracePath4()
 	{
@@ -2035,16 +1980,16 @@ public class TestMarkovLearner
 			ndFSM.addVertex(ndFSM.addVertex(ndFSM.addVertex(fsm.findVertex("B"), true, lblA),true,lblA),true,lblC);
 		}
 		Assert.assertEquals(10,ndFSM.getStateNumber());
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","b"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","c"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a","c"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a","a","a"}),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of(),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","b"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","c"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a","c"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a","a","a"),config,converter),fsm.findVertex("A")));
 	}
 	
-	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link TestPathTracing}. */
+	/** Tests non-deterministic case of {@link MarkovClassifier#tracePath}, deterministic case is tested with {@link statechum.analysis.learning.TestPathTracing}. */
 	@Test
 	public void testTracePath5()
 	{
@@ -2059,35 +2004,35 @@ public class TestMarkovLearner
 			ndFSM.addVertex(Brej,false,lblC);
 		}
 		Assert.assertEquals(13,ndFSM.getStateNumber());
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","b"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a","a"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","c"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","b"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","b","c"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a","c"}),config,converter),fsm.findVertex("A")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t","a","a","a","a","a"}),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of(),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","b"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a","a"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","c"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","b"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","b","c"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a","c"),config,converter),fsm.findVertex("A")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("t","a","a","a","a","a"),config,converter),fsm.findVertex("A")));
 
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{}),config,converter),fsm.findVertex("B")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"b"}),config,converter),fsm.findVertex("B")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a"}),config,converter),fsm.findVertex("B")));
-		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a","a"}),config,converter),fsm.findVertex("B")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","c"}),config,converter),fsm.findVertex("B")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","b"}),config,converter),fsm.findVertex("B")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","b","c"}),config,converter),fsm.findVertex("B")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a","c"}),config,converter),fsm.findVertex("B")));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"a","a","a","a","a"}),config,converter),fsm.findVertex("B")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of(),config,converter),fsm.findVertex("B")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of("b"),config,converter),fsm.findVertex("B")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a"),config,converter),fsm.findVertex("B")));
+		Assert.assertTrue(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a","a"),config,converter),fsm.findVertex("B")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","c"),config,converter),fsm.findVertex("B")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","b"),config,converter),fsm.findVertex("B")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","b","c"),config,converter),fsm.findVertex("B")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a","c"),config,converter),fsm.findVertex("B")));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList("a","a","a","a","a"),config,converter),fsm.findVertex("B")));
 
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{}),config,converter),Brej));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"t"}),config,converter),Brej));
-		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(Arrays.asList(new String[]{"b"}),config,converter),Brej));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of(),config,converter),Brej));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of("t"),config,converter),Brej));
+		Assert.assertFalse(MarkovClassifier.tracePath(ndFSM,AbstractLearnerGraph.buildList(List.of("b"),config,converter),Brej));
 	}
 	
 	
 	public String collectionOfTransitionsToString(Collection<Map.Entry<Label,CmpVertex>> c)
 	{
-		StringBuffer outcome = new StringBuffer();
+		StringBuilder outcome = new StringBuilder();
 		for(Map.Entry<Label,CmpVertex> entry:c)
 		{
 			outcome.append('{');outcome.append(entry.getKey().toString());outcome.append(',');outcome.append(entry.getValue().toString());outcome.append('}');
@@ -2187,13 +2132,9 @@ public class TestMarkovLearner
 	{
 		final LearnerGraph fsm = FsmParser.buildLearnerGraph("A-t->B-b->C", "testTracePath1",config,converter);
 		final Collection<Map.Entry<Label,CmpVertex>> surroundingTransitions = MarkovPassivePairSelection.obtainSurroundingTransitions(fsm, MarkovClassifier.computeInverseGraph(fsm), fsm.findVertex("A"));
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run() throws NumberFormatException
-			{
-				surroundingTransitions.iterator().next().setValue(fsm.findVertex("A"));
-			}
-		}, UnsupportedOperationException.class, "changing values of this map entry is not permitted");
+		Helper.checkForCorrectException(
+				() -> surroundingTransitions.iterator().next().setValue(fsm.findVertex("A")),
+				UnsupportedOperationException.class, "changing values of this map entry is not permitted");
 	}
 	
 	@Test
@@ -2215,20 +2156,12 @@ public class TestMarkovLearner
 	public void testUniquePaths1()
 	{
 		final LearnerGraph fsm = new LearnerGraph(config);fsm.initEmpty();
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run()
-			{
-				MarkovClassifier.calculateFractionOfStatesIdentifiedBySingletons(fsm);
-			}
-		}, IllegalArgumentException.class, "empty reference");
-		Helper.checkForCorrectException(new whatToRun() {
-			@Override
-			public void run()
-			{
-				MarkovClassifier.calculateFractionOfIdentifiedStates(fsm,null);
-			}
-		}, IllegalArgumentException.class, "empty reference");
+		Helper.checkForCorrectException(
+				() -> MarkovClassifier.calculateFractionOfStatesIdentifiedBySingletons(fsm),
+				IllegalArgumentException.class, "empty reference");
+		Helper.checkForCorrectException(
+				() -> MarkovClassifier.calculateFractionOfIdentifiedStates(fsm,null),
+				IllegalArgumentException.class, "empty reference");
 	}
 	
 	@Test
@@ -2394,7 +2327,7 @@ public class TestMarkovLearner
 	@Test
 	public void testComputeClosure1()
 	{
-		Set<CmpVertex> verts=new TreeSet<CmpVertex>();
+		Set<CmpVertex> verts= new TreeSet<>();
 		MarkovClassifier.computeClosure(trainingGraphForClosures,verts,0);
 		Assert.assertTrue(verts.isEmpty());
 	}
@@ -2402,7 +2335,7 @@ public class TestMarkovLearner
 	@Test
 	public void testComputeClosure2()
 	{
-		Set<CmpVertex> verts=new TreeSet<CmpVertex>();
+		Set<CmpVertex> verts= new TreeSet<>();
 		MarkovClassifier.computeClosure(trainingGraphForClosures,verts,2);
 		Assert.assertTrue(verts.isEmpty());
 	}
@@ -2410,7 +2343,7 @@ public class TestMarkovLearner
 	@Test
 	public void testComputeClosure3()
 	{
-		Set<CmpVertex> verts=new TreeSet<CmpVertex>();verts.add(trainingGraphForClosures.findVertex("B"));
+		Set<CmpVertex> verts= new TreeSet<>();verts.add(trainingGraphForClosures.findVertex("B"));
 		MarkovClassifier.computeClosure(trainingGraphForClosures,verts,0);
 		Assert.assertEquals(1,verts.size());Assert.assertSame(trainingGraphForClosures.findVertex("B"),verts.iterator().next());
 	}
@@ -2418,7 +2351,7 @@ public class TestMarkovLearner
 	@Test
 	public void testComputeClosure4()
 	{
-		Set<CmpVertex> verts=new TreeSet<CmpVertex>();verts.add(trainingGraphForClosures.findVertex("B"));
+		Set<CmpVertex> verts= new TreeSet<>();verts.add(trainingGraphForClosures.findVertex("B"));
 		MarkovClassifier.computeClosure(trainingGraphForClosures,verts,1);
 		Assert.assertEquals(2,verts.size());
 		Iterator<CmpVertex> iter=verts.iterator();Assert.assertSame(trainingGraphForClosures.findVertex("B"),iter.next());Assert.assertSame(trainingGraphForClosures.findVertex("C"),iter.next());
@@ -2427,7 +2360,7 @@ public class TestMarkovLearner
 	@Test
 	public void testComputeClosure5()
 	{
-		Set<CmpVertex> verts=new TreeSet<CmpVertex>();verts.add(trainingGraphForClosures.findVertex("B"));
+		Set<CmpVertex> verts= new TreeSet<>();verts.add(trainingGraphForClosures.findVertex("B"));
 		MarkovClassifier.computeClosure(trainingGraphForClosures,verts,2);
 		Assert.assertEquals(3,verts.size());
 		Iterator<CmpVertex> iter=verts.iterator();Assert.assertSame(trainingGraphForClosures.findVertex("B"),iter.next());Assert.assertSame(trainingGraphForClosures.findVertex("C"),iter.next());Assert.assertSame(trainingGraphForClosures.findVertex("D"),iter.next());
