@@ -17,37 +17,27 @@
  */ 
 package statechum.analysis.learning.rpnicore;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
-import static statechum.analysis.learning.rpnicore.LearnerGraph.createLabelToStateMap;
-import static statechum.analysis.learning.rpnicore.FsmParser.buildLearnerGraph;
-
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.TreeMap;
-import java.util.Map.Entry;
-
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized.Parameters;
 import org.junit.runners.ParameterizedWithName;
 import org.junit.runners.ParameterizedWithName.ParametersToString;
-
 import statechum.Configuration;
 import statechum.Configuration.LABELKIND;
+import statechum.DeterministicDirectedSparseGraph.CmpVertex;
 import statechum.Helper;
 import statechum.Label;
 import statechum.StringVertex;
-import statechum.DeterministicDirectedSparseGraph.CmpVertex;
+import statechum.collections.MapWithSearch;
+
+import java.util.*;
+import java.util.Map.Entry;
+
+import static org.junit.Assert.*;
 import static statechum.Helper.checkForCorrectException;
-import static statechum.Helper.whatToRun;
+import static statechum.analysis.learning.rpnicore.FsmParser.buildLearnerGraph;
+import static statechum.analysis.learning.rpnicore.LearnerGraph.createLabelToStateMap;
 import static statechum.analysis.learning.rpnicore.TestEqualityComparisonAndHashCode.equalityTestingHelper;
 
 @RunWith(ParameterizedWithName.class)
@@ -94,32 +84,32 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	
 	/** test with empty data. */
 	@Test 
-	public final void testCreateLabelToStateMap1() 
+	public void testCreateLabelToStateMap1()
 	{
-		assertTrue(createLabelToStateMap(new LinkedList<Label>(), new StringVertex("junk"), null).isEmpty());
-		Map<Label,List<CmpVertex>> map = new HashMap<Label,List<CmpVertex>>();
-		assertSame(map,createLabelToStateMap(new LinkedList<Label>(), new StringVertex("junk"), map));assertTrue(map.isEmpty());
+		assertTrue(createLabelToStateMap(new LinkedList<>(), new StringVertex("junk"), null).isEmpty());
+		Map<Label,List<CmpVertex>> map = new HashMap<>();
+		assertSame(map,createLabelToStateMap(new LinkedList<>(), new StringVertex("junk"), map));assertTrue(map.isEmpty());
 	}
 	
-	protected Label lb(String label)
+	private Label lb(String label)
 	{
 		return AbstractLearnerGraph.generateNewLabel(label, config,converter);
 	}
 	
 	@Test
-	public final void testCreateLabelIntern1()
+	public void testCreateLabelIntern1()
 	{
 		final Configuration conf = config.copy();conf.setLabelKind(LABELKIND.LABEL_STRING);
 		final statechum.analysis.learning.rpnicore.Transform.InternStringLabel intern = null;
 		final Label lbl = AbstractLearnerGraph.generateNewLabel("A", conf,intern);
-		Helper.checkForCorrectException(new whatToRun() { public @Override void run() {
-			lbl.toInt();
-		}},UnsupportedOperationException.class,"string labels");
+		Helper.checkForCorrectException(
+				lbl::toInt,
+				UnsupportedOperationException.class,"string labels");
 	}
 	
 	
 	@Test
-	public final void testCreateLabelIntern3()
+	public void testCreateLabelIntern3()
 	{
 		final Configuration conf = config.copy();conf.setLabelKind(LABELKIND.LABEL_STRING);
 		final statechum.analysis.learning.rpnicore.Transform.InternStringLabel intern = new statechum.analysis.learning.rpnicore.Transform.InternStringLabel();
@@ -132,82 +122,85 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	}
 	
 	@Test
-	public final void testCreateErlangLabelFailure1()
+	public void testCreateErlangLabelFailure1()
 	{
 		final Configuration conf = config.copy();conf.setLabelKind(LABELKIND.LABEL_ERLANG);
-		Helper.checkForCorrectException(new whatToRun() { public @Override void run() {
-			AbstractLearnerGraph.generateNewLabel(33,conf,converter);
-		}},IllegalArgumentException.class,"No parser");
+		Helper.checkForCorrectException(
+				() -> AbstractLearnerGraph.generateNewLabel(33,conf,converter),
+				IllegalArgumentException.class,"No parser");
 	}
 	
 	/** test for no changes when nothing is to be added. */
 	@Test 
-	public final void testCreateLabelToStateMap2()
+	public void testCreateLabelToStateMap2()
 	{
-		Map<Label,List<CmpVertex>> trans = new HashMap<Label,List<CmpVertex>>();
+		Map<Label,List<CmpVertex>> trans = new HashMap<>();
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")}),B=Arrays.asList(new CmpVertex[]{new StringVertex("B")});
 		trans.put(lb("a"), A);trans.put(lb("b"), A);trans.put(lb("c"), B);
-		Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();expected.putAll(trans);
-		assertSame(trans,createLabelToStateMap(new LinkedList<Label>(), new StringVertex("junk"),trans));
+		Map<Label, List<CmpVertex>> expected = new HashMap<>(trans);
+		assertSame(trans,createLabelToStateMap(new LinkedList<>(), new StringVertex("junk"),trans));
 		assertEquals(expected,trans);
 	}
 	
 	/** test for correct data being added when two transitions lead to the same state as one of the existing states. */
 	@Test 
-	public final void testCreateLabelToStateMap3()
+	public void testCreateLabelToStateMap3()
 	{
-		Map<Label,List<CmpVertex>> trans = new HashMap<Label,List<CmpVertex>>();
+		Map<Label,List<CmpVertex>> trans = new HashMap<>();
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")}),B=Arrays.asList(new CmpVertex[]{new StringVertex("B")});
 		trans.put(lb("a"), A);trans.put(lb("b"), A);trans.put(lb("c"), B);
-		Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();expected.putAll(trans);expected.put(lb("e"), A);expected.put(lb("g"), A);
+		Map<Label, List<CmpVertex>> expected = new HashMap<>(trans);
+		expected.put(lb("e"), A);expected.put(lb("g"), A);
 		assertSame(trans,createLabelToStateMap(labelList(new String[] {"g","e"}), new StringVertex("A"),trans));
 		assertEquals(expected,trans);
 	}
 	
 	/** test for correct data being added when two transitions lead to a new state. */
 	@Test 
-	public final void testCreateLabelToStateMap4()
+	public void testCreateLabelToStateMap4()
 	{
-		Map<Label,List<CmpVertex>> trans = new HashMap<Label,List<CmpVertex>>();
+		Map<Label,List<CmpVertex>> trans = new HashMap<>();
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")}),
 			B=Arrays.asList(new CmpVertex[]{new StringVertex("B")}),
 			D=Arrays.asList(new CmpVertex[]{new StringVertex("D")});
 		trans.put(lb("a"), A);trans.put(lb("b"), A);trans.put(lb("c"), B);
-		Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();expected.putAll(trans);expected.put(lb("e"),D);expected.put(lb("f"), D);
+		Map<Label, List<CmpVertex>> expected = new HashMap<>(trans);
+		expected.put(lb("e"),D);expected.put(lb("f"), D);
 		assertSame(trans,createLabelToStateMap(labelList(new String[] {"f","e"}), new StringVertex("D"),trans));
 		assertEquals(expected,trans);
 	}
 	
 	/** test for correct data being added when two transitions lead to the same state as one of the existing states. */
 	@Test 
-	public final void testCreateLabelToStateMap5()
+	public void testCreateLabelToStateMap5()
 	{
-		Map<Label,List<CmpVertex>> trans = new HashMap<Label,List<CmpVertex>>();
+		Map<Label,List<CmpVertex>> trans = new HashMap<>();
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")}),
 			B=Arrays.asList(new CmpVertex[]{new StringVertex("B")});
 		trans.put(lb("a"), A);trans.put(lb("b"), A);trans.put(lb("c"), B);
-		Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();expected.putAll(trans);expected.put(lb("e"), B);expected.put(lb("g"), B);
+		Map<Label, List<CmpVertex>> expected = new HashMap<>(trans);
+		expected.put(lb("e"), B);expected.put(lb("g"), B);
 		assertSame(trans,createLabelToStateMap(labelList(new String[] {"g","e"}), new StringVertex("B"),trans));
 		assertEquals(expected,trans);
 	}
 	
 	/** test for correct data being added when an empty collection is passed. */
 	@Test 
-	public final void testCreateLabelToStateMap6()
+	public void testCreateLabelToStateMap6()
 	{
-		Map<Label,List<CmpVertex>> trans = new HashMap<Label,List<CmpVertex>>();
+		Map<Label,List<CmpVertex>> trans = new HashMap<>();
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")});
-		Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();expected.put(lb("e"),A);expected.put(lb("b"),A);
+		Map<Label,List<CmpVertex>> expected = new HashMap<>();expected.put(lb("e"),A);expected.put(lb("b"),A);
 		assertSame(trans,createLabelToStateMap(labelList(new String[] {"b","e"}), new StringVertex("A"),trans));
 		assertEquals(expected,trans);
 	}
 
 	/** test for correct data being added when null is passed. */
 	@Test 
-	public final void testCreateLabelToStateMap7()
+	public void testCreateLabelToStateMap7()
 	{
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")});
-		Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();expected.put(lb("e"),A);expected.put(lb("b"),A);
+		Map<Label,List<CmpVertex>> expected = new HashMap<>();expected.put(lb("e"),A);expected.put(lb("b"),A);
 		assertEquals(expected,createLabelToStateMap(labelList(new String[] {"b","e"}), new StringVertex("A"),null));
 	}
 
@@ -216,15 +209,15 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	 * labels, hence no duplicate labels can be placed on edges. 
 	 */
 	@Test 
-	public final void testCreateLabelToStateMap8()
+	public void testCreateLabelToStateMap8()
 	{
-		final Map<Label,List<CmpVertex>> trans = new HashMap<Label,List<CmpVertex>>();
+		final Map<Label,List<CmpVertex>> trans = new HashMap<>();
 		List<CmpVertex> A=Arrays.asList(new CmpVertex[]{new StringVertex("A")}),
 			B=Arrays.asList(new CmpVertex[]{new StringVertex("B")});
 		trans.put(lb("a"), A);trans.put(lb("b"), A);trans.put(lb("c"), B);
-		checkForCorrectException(new whatToRun() { public @Override void run() {
-			createLabelToStateMap(labelList(new String[] {"b","e"}), new StringVertex("A"),trans);
-		}},IllegalArgumentException.class,"duplicate");
+		checkForCorrectException(
+				() -> createLabelToStateMap(labelList(new String[] {"b","e"}), new StringVertex("A"),trans),
+				IllegalArgumentException.class,"duplicate");
 	}
 
 	/** Test for the correct handling of duplicate transitions, between two new transitions.
@@ -232,25 +225,25 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	 * labels, hence no duplicate labels can be placed on edges. 
 	 */
 	@Test 
-	public final void testCreateLabelToStateMap9() // test for correct detection of nondeterminism
+	public void testCreateLabelToStateMap9() // test for correct detection of nondeterminism
 	{
-		checkForCorrectException(new whatToRun() { public @Override void run() {
-			createLabelToStateMap(labelList(new String[] {"b","b"}), new StringVertex("A"),null);
-		}},IllegalArgumentException.class,"duplicate");
+		checkForCorrectException(
+				() -> createLabelToStateMap(labelList(new String[] {"b","b"}), new StringVertex("A"),null),
+				IllegalArgumentException.class,"duplicate");
 	}
 	
 	/** test for correct data being added in the case of nondeterminism. */
 	@Test 
-	public final void testCreateLabelToStateMap_nondet1()
+	public void testCreateLabelToStateMap_nondet1()
 	{
 		Map<Label,List<CmpVertex>> trans = createLabelToStateMap(labelList(new String[] {"t"}), new StringVertex("A"),
-			createLabelToStateMap(AbstractLearnerGraph.buildList(Arrays.asList(new String[] {"b","e"}),config,converter), new StringVertex("A"),
-				createLabelToStateMap(AbstractLearnerGraph.buildList(Arrays.asList(new String[] {"f"}),config,converter), new StringVertex("C"),null)));
+			createLabelToStateMap(AbstractLearnerGraph.buildList(Arrays.asList("b","e"),config,converter), new StringVertex("A"),
+				createLabelToStateMap(AbstractLearnerGraph.buildList(List.of("f"),config,converter), new StringVertex("C"),null)));
 		List<CmpVertex> 
 			A=Arrays.asList(new CmpVertex[]{new StringVertex("A")}),
 			C=Arrays.asList(new CmpVertex[]{new StringVertex("C")}),
 			AC=Arrays.asList(new CmpVertex[]{new StringVertex("A"),new StringVertex("C")});
-			Map<Label,List<CmpVertex>> expected = new HashMap<Label,List<CmpVertex>>();
+			Map<Label,List<CmpVertex>> expected = new HashMap<>();
 			expected.put(lb("e"),AC);expected.put(lb("b"),AC);expected.put(lb("f"), C);expected.put(lb("t"), A);
 		assertSame(trans,createLabelToStateMap(labelList(new String[] {"b","e"}), new StringVertex("C"),trans));
 		assertEquals(expected,trans);
@@ -263,9 +256,9 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	 * @param from the source state of the outgoing transitions - used in an error message
 	 * @return result of conversion 
 	 */
-	public static Map<Label,CmpVertex> convertRowToDet(LearnerGraph graph,Map<Label,List<CmpVertex>> map, Map<CmpVertex,CmpVertex> oldToNew, CmpVertex from)
+	public static MapWithSearch<Label,Label,CmpVertex> convertRowToDet(LearnerGraph graph, Map<Label,List<CmpVertex>> map, Map<CmpVertex,CmpVertex> oldToNew, CmpVertex from)
 	{
-		Map<Label,CmpVertex> result = graph.createNewRow();
+		MapWithSearch<Label,Label,CmpVertex> result = graph.createNewRow();
 		for(Entry<Label,List<CmpVertex>> rowEntry:map.entrySet())
 		{
 			if (rowEntry.getValue().size() != 1)
@@ -279,7 +272,7 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 
 	/** Empty row. */
 	@Test
-	public final void testRowConversion0()
+	public void testRowConversion0()
 	{
 		CmpVertex A = new StringVertex("A");
 		LearnerGraph graph = new LearnerGraph(confString);
@@ -291,7 +284,7 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 
 	/** Row with a single entry. */
 	@Test
-	public final void testRowConversion1()
+	public void testRowConversion1()
 	{
 		CmpVertex A = new StringVertex("A"), B = new StringVertex("B");
 		LearnerGraph graph = new LearnerGraph(confString);
@@ -303,7 +296,7 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 
 	/** Row with a number of entries including a loop. */
 	@Test
-	public final void testRowConversion2()
+	public void testRowConversion2()
 	{
 		CmpVertex A = new StringVertex("A"), B = new StringVertex("B"), C = new StringVertex("C");
 		LearnerGraph graph = new LearnerGraph(confString);
@@ -318,11 +311,11 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 
 	/** Row with multiple entries and a map for renumbering of vertices. */
 	@Test
-	public final void testRowConversion2_renumbered()
+	public void testRowConversion2_renumbered()
 	{
 		CmpVertex A = new StringVertex("A"), B = new StringVertex("B"), C = new StringVertex("C"),
 			newA = new StringVertex("newA"),newB = new StringVertex("newB"), newC = new StringVertex("newC");
-		Map<CmpVertex,CmpVertex> oldToNew = new TreeMap<CmpVertex,CmpVertex>();oldToNew.put(A,newA);oldToNew.put(B,newB);oldToNew.put(C,newC);
+		Map<CmpVertex,CmpVertex> oldToNew = new TreeMap<>();oldToNew.put(A,newA);oldToNew.put(B,newB);oldToNew.put(C,newC);
 		LearnerGraph graph = new LearnerGraph(confString);
 		Map<Label,CmpVertex> actual=convertRowToDet(graph,
 						createLabelToStateMap(labelList(new String[] {"a","b"}),B,
@@ -335,32 +328,35 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 
 	/** Non-determinism on transition a. */
 	@Test
-	public final void testRowConversion_nondet1()
+	public void testRowConversion_nondet1()
 	{
 		final CmpVertex A = new StringVertex("A"), B = new StringVertex("B"), C = new StringVertex("C");
 		final LearnerGraph graph = new LearnerGraph(confString);
 		
-		checkForCorrectException(new whatToRun() { public @Override void run() {
-			convertRowToDet(graph,createLabelToStateMap(labelList(new String[] {"a","b"}),B,createLabelToStateMap(labelList(new String[] {"a"}),C,null)), null,A);
-		}},IllegalArgumentException.class,"non-deterministic");
+		checkForCorrectException(
+				() -> convertRowToDet(graph,createLabelToStateMap(labelList(new String[] {"a","b"}),B,
+						createLabelToStateMap(labelList(new String[] {"a"}),C,null)), null,A),
+				IllegalArgumentException.class,"non-deterministic");
 	}
 
 	/** Transition with an empty target state list. */
 	@Test
-	public final void testRowConversion_nondet2()
+	public void testRowConversion_nondet2()
 	{
 		final CmpVertex A = new StringVertex("A");
 		final LearnerGraph graph = new LearnerGraph(confString);
 		
-		checkForCorrectException(new whatToRun() { public @Override void run() {
-			Map<Label,List<CmpVertex>> nondetRow = new TreeMap<Label,List<CmpVertex>>();nondetRow.put(lb("a"), new LinkedList<CmpVertex>());
-			convertRowToDet(graph,nondetRow, null,A);
-		}},IllegalArgumentException.class,"non-deterministic");
+		checkForCorrectException(
+				() -> {
+					Map<Label, List<CmpVertex>> nondetRow = new TreeMap<>();
+					nondetRow.put(lb("a"), new LinkedList<>());
+					convertRowToDet(graph, nondetRow, null, A);
+		},IllegalArgumentException.class,"non-deterministic");
 	}
 
 	/** Tests that deterministic graphs are correctly built. */
 	@Test
-	public final void testGraphConstruction1a()
+	public void testGraphConstruction1a()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -372,13 +368,13 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.setInit(expected.findVertex("A"));
 		
 		assertEquals("A", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,graph.transitionMatrix.equals(expected.transitionMatrix));
+		assertEquals("incorrect transition set", graph.transitionMatrix, expected.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);		
 	}
 	
 	/** Tests that deterministic graphs are correctly built. */
 	@Test
-	public final void testGraphConstruction1b()
+	public void testGraphConstruction1b()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -390,7 +386,7 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.setInit(expected.findVertex("A"));
 		
 		assertEquals("A", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,graph.transitionMatrix.equals(expected.transitionMatrix));
+		assertEquals("incorrect transition set", graph.transitionMatrix, expected.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);		
 	}
 
@@ -399,7 +395,7 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	
 	/** Tests that deterministic graphs are correctly built. */
 	@Test
-	public final void testGraphConstruction2()
+	public void testGraphConstruction2()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -416,13 +412,13 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.setInit(expected.findVertex("A"));
 		
 		assertEquals("A", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,expected.transitionMatrix.equals(graph.transitionMatrix));
+		assertEquals("incorrect transition set", expected.transitionMatrix, graph.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);		
 	}
 
 	/** Tests that deterministic graphs are correctly built. */
 	@Test
-	public final void testGraphConstruction3()
+	public void testGraphConstruction3()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -437,13 +433,13 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.setInit(expected.findVertex("A"));
 		
 		assertEquals("A", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,expected.transitionMatrix.equals(graph.transitionMatrix));
+		assertEquals("incorrect transition set", expected.transitionMatrix, graph.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);		
 	}
 
 	/** Tests that deterministic graphs are correctly built. */
 	@Test
-	public final void testGraphConstruction4()
+	public void testGraphConstruction4()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -464,13 +460,13 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.findVertex("D").setAccept(true);
 		
 		assertEquals("A", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,expected.transitionMatrix.equals(graph.transitionMatrix));
+		assertEquals("incorrect transition set", expected.transitionMatrix, graph.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);		
 	}
 
 	/** Tests that deterministic graphs are correctly built. */
 	@Test
-	public final void testGraphConstruction5()
+	public void testGraphConstruction5()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -485,13 +481,13 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.setInit(expected.findVertex("A"));
 		
 		assertEquals("A", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,expected.transitionMatrix.equals(graph.transitionMatrix));
+		assertEquals("incorrect transition set", expected.transitionMatrix, graph.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);		
 	}
 	
 	/** checks support for loops. */
 	@Test
-	public final void testGraphConstruction6()
+	public void testGraphConstruction6()
 	{
 		confString.setUseOrderedEntrySet(true);config.setUseOrderedEntrySet(true);
 		LearnerGraph expected = new LearnerGraph(confString);expected.initEmpty();
@@ -504,7 +500,7 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 		expected.setInit(expected.findVertex("P"));
 		
 		assertEquals("P", graph.getInit().getStringId());
-		assertEquals("incorrect transition set",true,expected.transitionMatrix.equals(graph.transitionMatrix));
+		assertEquals("incorrect transition set", expected.transitionMatrix, graph.transitionMatrix);
 		equalityTestingHelper(graph,expected,differentA,differentB, true);
 	}
 
@@ -514,9 +510,9 @@ public final class TestGraphConstruction extends TestWithMultipleConfigurations
 	@Test 
 	public void testGraphConstruction_fail()
 	{
-		Helper.checkForCorrectException(new whatToRun() { public @Override void run() {
-			buildLearnerGraph("A = THEN ==B","testGraphConstruction_fail",config,converter);
-		}},IllegalArgumentException.class,"unknown vertex");
+		Helper.checkForCorrectException(
+				() -> buildLearnerGraph("A = THEN ==B","testGraphConstruction_fail",config,converter),
+				IllegalArgumentException.class,"unknown vertex");
 	}
 
 }
